chore: Update lang

--- a/lang/cs-CZ.json
+++ b/lang/cs-CZ.json
@@ -2,22 +2,31 @@
   "name": "Čeština",
   "config": {
     "configHeader": "Nastavení",
-    "configDesc": "(Pro aplikaci některých změn musíte stisknout tlačítko 'Uložit a restartovat')",
-    "preferencesHeader": "Předvolby",
-    "extremeGames": "Obsah pro dospělé",
-    "extremeGamesDesc": "Povolí zobrazování her a štítků patřících do filtrační skupiny \"Pro dospělé\".",
+    "configDesc": "(Pro aplikaci některých změn musíte stisknout tlačítko \"Uložit a restartovat\")",
+    "preferencesHeader": "Přizpůsobení",
+    "extremeGames": "Zobrazit filtry obsahu pro dospělé",
+    "extremeGamesDesc": "Umožňuje přepínání, tvorbu a úpravy filtrů štítků označujících obsah nevhodný pro děti.",
+    "hideExtremeScreenshots": "Skrývat snímky obrazovky pro dospělé",
+    "hideExtremeScreenshotsDesc": "Skrývá snímky obrazovky u her s označením \"Pro Dospělé\", může být odkryto kliknutím na rozostřený obrázek.",
+    "fancyAnimations": "Hezčí Animace",
+    "fancyAnimationsDesc": "Povolí ve spouštěči hezčí animace.",
+    "searchLimit": "Limit výsledků vyhledávání",
+    "searchLimitDesc": "Limituje počet výsledků navrácených jakýmkoliv vyhledáváním",
+    "searchLimitUnlimited": "Neomezené",
+    "searchLimitValue": "{0} Výsledků",
     "enableEditing": "Povolit upravování",
-    "enableEditingDesc": "Povolit úpravy her a dalších aplikací. Také zobrazuje záložky související s úpravami.",
+    "enableEditingDesc": "Povolit úpravy her a přídavných aplikací. Také zobrazí záložky související s úpravami.",
     "onDemandImages": "Obrázky na vyžádání",
     "onDemandImagesDesc": "Stahovat a ukládat chybějící screenshoty a náhledy podle potřeby.",
     "currentLanguage": "Jazyk",
     "currentLanguageDesc": "Jazyk, který bude program primárně používat.",
     "fallbackLanguage": "Záložní jazyk",
-    "fallbackLanguageDesc": "Jazyk, který se použije, pokud aktuálně nastavený jazyk není kompletně přeložen.",
+    "fallbackLanguageDesc": "Jazyk, který se použije, pokud text není dostupný v preferovaném jazyku.",
     "auto": "Automaticky ({0})",
     "none": "Žádný",
+    "contentFiltersHeader": "Filtry obsahu",
     "flashpointHeader": "Flashpoint",
-    "flashpointPath": "Cesta k Flashpoint",
+    "flashpointPath": "Cesta k Flashpointu",
     "flashpointPathDesc": "Cesta ke složce Flashpoint (může být relativní)",
     "browse": "Procházet",
     "libraries": "Knihovny",
@@ -36,7 +45,7 @@
     "appPathOverridesDesc": "Přepíše cestu aplikace vlevo cestou vpravo při spouštění her.",
     "visualsHeader": "Vzhled",
     "useCustomTitleBar": "Použít upravenou horní lištu",
-    "useCustomTitleBarDesc": "Použije upravený vzhled horní lišty na základě motivu.",
+    "useCustomTitleBarDesc": "Upraví vzhled horní lišty na základě zvoleného motivu.",
     "theme": "Motiv",
     "noTheme": "Žádný motiv",
     "themeDesc": "ID motivu, který se má použít.",
@@ -45,7 +54,7 @@
     "logoSetDesc": "ID sady log, která má být použita.",
     "advancedHeader": "Pokročilé",
     "showDeveloperTab": "Zobrazit záložku pro vývojáře",
-    "showDeveloperTabDesc": "Zobrazí záložku 'Vývojář'. S největší pravděpodobností užitečné pouze pro vývojáře a kurátory.",
+    "showDeveloperTabDesc": "Zobrazí záložku \"Vývojář\". Toto je obvykle užitečné pouze pro vývojáře a kurátory.",
     "server": "Server",
     "serverDesc": "Server proces ke spuštění při zapínání launcheru.",
     "metadataServerHost": "Metadata Server Host",
@@ -64,26 +73,27 @@
     "updateHeader": "Aktualizace spouštěče",
     "currentVersion": "Současná verze",
     "nextVersion": "Další verze",
-    "updateAvailable": "Aktualizace je dostupná",
+    "updateAvailable": "Je dostupná aktualizace",
     "upToDate": "Aktuální.",
     "downloadingUpdate": "Stahuji aktualizaci...",
-    "quickStartHeader": "Rychlý Start",
-    "hallOfFameInfo": "Zajímá vás jen to nejlepší? Mrkněte na {0}!",
-    "hallOfFame": "Síň slávy",
-    "allGamesInfo": "Hledáte, co byste si zahráli? Podívejte se na {0}.",
-    "allGames": "Katalog her",
-    "allAnimationsInfo": "Chcete jen něco zhlédnout? Podívejte se na {0}.",
-    "allAnimations": "Katalog animací",
+    "quickStartHeader": "Rychlý start",
+    "hallOfFameInfo": "Zajímá vás jen to nejlepší? Mrkněte do {0}!",
+    "hallOfFame": "Síně slávy",
+    "allGamesInfo": "Hledáte, co byste si zahráli? Podívejte se do {0}.",
+    "allGames": "Katalogu her",
+    "allAnimationsInfo": "Chcete se jen na něco dívat? Podívejte se do {0}.",
+    "allAnimations": "Katalogu animací",
     "configInfo": "Chcete něco změnit? Běžte do {0}.",
     "config": "Nastavení",
-    "helpInfo": "Potřebujete pomoc? {0}.",
+    "helpInfo": "Potřebujete pomoci? {0}.",
     "help": "Nahlédněte do nápovědy",
     "upgradesHeader": "Vylepšení",
+    "updateFeedHeader": "Novinky",
     "installComplete": "Instalace dokončena",
     "alreadyInstalled": "Již nainstalováno",
     "download": "Stáhnout",
     "update": "Aktualizovat",
-    "checkingUpgradeState": "Kontrola stavu aktualizace...",
+    "checkingUpgradeState": "Kontrola stavu vylepšení...",
     "extrasHeader": "Další",
     "favoritesPlaylist": "Seznam oblíbených",
     "tagList": "Seznam štítků",
@@ -103,7 +113,8 @@
     "clearLog": "Vymazat logy",
     "copy404Urls": "Zkopírovat 404 URL adresy",
     "uploadLog": "Nahrát Log",
-    "copiedToClipboard": "Zkopírováno do Schránky"
+    "copiedToClipboard": "Zkopírováno do Schránky",
+    "openLogsWindow": "Otevřít okno s logy"
   },
   "app": {
     "home": "Domů",
@@ -146,20 +157,20 @@
     "checkGameIdsDesc": "Vypíše všechny hry, které mají neplatné nebo duplicitní ID",
     "checkGameTitles": "Zkontrolovat názvy her",
     "checkGameTitlesDesc": "Vypíše všechny hry, které mají neplatný nebo duplicitní název v rámci stejné platformy",
-    "checkGameFields": "Zkontrolovat herní pole",
-    "checkGameFieldsDesc": "Vypíše všechny hry, které mají prázdné pole (pokud jsou povinné)",
+    "checkGameFields": "Zkontrolovat povinná metadata",
+    "checkGameFieldsDesc": "Vypíše všechny hry, které mají některé z povinných polí prázdné",
     "checkPlaylists": "Zkontrolovat seznamy",
     "checkPlaylistsDesc": "Vypíše všechny seznamy, které mají neplatné nebo duplicitní ID, anebo obsahují hry s neplatným, duplicitním nebo chybějícím ID",
     "checkGameFileLocation": "Zkontrolovat umístění herních souborů",
-    "checkGameFileLocationDesc": "Vypíše všechny hry, které mají chybou cestu ve spouštěcím příkazu (týká se 'Otevřít umístění souboru', nikoliv spouštění hry)",
+    "checkGameFileLocationDesc": "Vypíše všechny hry, které mají ve spouštěcím příkazu chybou cestu (vztahuje se k \"Otevřít umístění souboru\", nikoliv ke spouštění hry)",
     "checkMissingExecMappings": "Zkontrolovat Chybějící Mappingy Exekutiv",
     "checkMissingExecMappingsDesc": "Vypíše všechny unikátní exekutivy pro win32, linux a darwin kterým chybí mapping",
     "renameImagesTitleToId": "Přejmenovat obrázky (název => ID)",
-    "renameImagesTitleToIdDesc": "Najde všechny obrázky, které mají ve jméně souboru název hry a přejmenuje je na ID",
+    "renameImagesTitleToIdDesc": "Najde všechny herní obrázky, používající ve jméně souboru název hry, ke které jsou přidruženy a přejmenuje je, aby místo toho používaly ID hry",
     "renameImagesIdToTitle": "Přejmenovat obrázky (ID => název)",
-    "renameImagesIdToTitleDesc": "Najde všechny obrázky, které mají ve jméně souboru ID a přejmenuje je na název hry",
+    "renameImagesIdToTitleDesc": "Najde všechny herní obrázky, používající ve jméně souboru ID hry, ke které jsou přidruženy a přejmenuje je, aby místo toho používaly název hry",
     "createMissingFolders": "Vytvořit chybějící složky",
-    "createMissingFoldersDesc": "Najde všechny složky, které chybí v definované Flashpoint struktuře složek a vytvoří je",
+    "createMissingFoldersDesc": "Najde všechny složky, které chybí ve struktuře složek Flashpointu a vytvoří je",
     "importLegacyPlatforms": "Importovat Legacy Platformy",
     "importLegacyPlatformsDesc": "Importuje Legacy Platformy z `Data/Platforms/` - POZOR: Přepíše hry s konflikty",
     "importLegacyPlaylists": "Importovat Legacy Seznamy",
@@ -184,11 +195,11 @@
     "servicesMissing": "Nebyly nalezeny žádné služby.",
     "running": "Spuštěno",
     "stopped": "Zastaveno",
-    "killing": "Násilné ukončení",
+    "killing": "Ukončování",
     "start": "Spustit",
     "startDesc": "Spustit službu",
     "stop": "Zastavit",
-    "stopDesc": "Zastavit službu",
+    "stopDesc": "Zastavit spuštěnou službu",
     "restart": "Restartovat",
     "restartDesc": "Restartovat službu",
     "details": "Detaily",
@@ -197,7 +208,7 @@
   "about": {
     "aboutHeader": "Podrobnosti",
     "flashpoint": "BlueMaxima's Flashpoint",
-    "flashpointDesc": "Bluemaxima's Flashpoint je projekt, jehož cílem je zachování her a animací vytvořených na starších webových platformách jako je např. Flash, Shockwave, Java Applet, ale i novějších, jako je HTML5 a Unity.",
+    "flashpointDesc": "Bluemaxima's Flashpoint je projekt, jehož cílem je zachování her a animací vytvořených na starších webových platformách jako například Flash, Shockwave, Java Applet, ale i novějších, jako je HTML5 a Unity. Zároveň cílí na umožnění snadného procházení a spouštění všech těchto výtvorů.",
     "website": "Webová stránka",
     "flashpointLauncher": "Flashpoint Launcher",
     "flashpointLauncherDesc": "Desktopová aplikace s otevřeným zdrojovým kódem, která slouží pro procházení, spuštění a správu her a animací z projektu Flashpoint.",
@@ -266,7 +277,7 @@
     "thumbnail": "Miniatura",
     "screenshot": "Náhled",
     "dropImageHere": "Obrázek vložíte přetažením",
-    "noGameSelected": "Nebyla vybrána žádná hra",
+    "noGameSelected": "Žádný/á/é {0} nevybrán/a/o",
     "clickToSelectGame": "Kliknutím na hru provedete její výběr.",
     "deleteAdditionalApplication": "Smazat podružnou aplikaci",
     "deleteGameAndAdditionalApps": "Smazat hru (a všechny podružné aplikace)",
@@ -288,7 +299,10 @@
     "saveAndRestart": "Uložit a restartovat",
     "thereAreNoGames": "Nebyly nalezeny žádné hry.",
     "noGameMatchedDesc": "Nebyly nalezeny žádné výsledky hledání.",
-    "noGameMatchedSearch": "Zkuste méně omezit výběr hledání."
+    "noGameMatchedSearch": "Zkuste méně omezit výběr hledání.",
+    "mountParameters": "Zavádějící parametry",
+    "noMountParameters": "Žádné zavádějící parametry",
+    "showExtremeScreenshot": "Zobrazovat snímky obrazovky pro dospělé"
   },
   "tags": {
     "name": "Název",
@@ -413,7 +427,9 @@
     "installingFiles": "Instaluji soubory...",
     "complete": "Dokončeno",
     "exportMetaEditTitle": "Exportovat úpravy metadat",
-    "exportMetaEditDesc": "Vyberte všechny vlastnosti k exportu:"
+    "exportMetaEditDesc": "Vyberte všechny vlastnosti k exportu:",
+    "showImage": "Zaostřit obrázek",
+    "searching": "Vyhledávám..."
   },
   "menu": {
     "viewThumbnailInFolder": "Otevřít složku s umístěním miniatury",
@@ -492,10 +508,13 @@
   },
   "libraries": {
     "arcade": "Hry",
+    "arcadeSingular": "Hra",
     "arcadePlural": "Všechny Hry",
     "theatre": "Animace",
+    "theatreSingular": "Animace",
     "theatrePlural": "Všechny Animace",
     "auditorium": "Newgrounds Auditorium",
+    "auditoriumSingular": "Animace",
     "auditoriumPlural": "Všechny Newgrounds Animace"
   },
   "upgrades": {
