--- a/lang/da-DK.json
+++ b/lang/da-DK.json
@@ -4,8 +4,16 @@
     "configHeader": "Konfiguration",
     "configDesc": "(Du skal trykke 'Gem & Genstart' for at nogen af ændringerne tager effekt)",
     "preferencesHeader": "Preferencer",
-    "extremeGames": "Extreme Content",
-    "extremeGamesDesc": "Allow tags inside 'Extreme' tag filter groups and corresponding games to be shown.",
+    "extremeGames": "Show Extreme Filters",
+    "extremeGamesDesc": "Allows Extreme tag filters to be toggled, created and modified to control content unsuitable for children.",
+    "hideExtremeScreenshots": "Hide Extreme Screenshots",
+    "hideExtremeScreenshotsDesc": "Hides screenshots of Extreme tagged content, can be unhidden with a click on the image box.",
+    "fancyAnimations": "Fancy Animations",
+    "fancyAnimationsDesc": "Enable fancy animations in the launcher.",
+    "searchLimit": "Search Limit",
+    "searchLimitDesc": "Limit the number of results returned in any search",
+    "searchLimitUnlimited": "Unlimited",
+    "searchLimitValue": "{0} Results",
     "enableEditing": "Tænd Redigering",
     "enableEditingDesc": "Aktiver redigering af spil og yderligere programmer. Viser også faner relateret til redigering.",
     "onDemandImages": "Ved Efterspørgselsbilleder",
@@ -16,6 +24,7 @@
     "fallbackLanguageDesc": "Hvilket sprog til at bruge på et ukomplet sprog.",
     "auto": "Auto ({0})",
     "none": "Ingen",
+    "contentFiltersHeader": "Content Filters",
     "flashpointHeader": "Flashpoint",
     "flashpointPath": "Flashpoint Sti",
     "flashpointPathDesc": "Stien til Flashpoint folderen (kan være relativt)",
@@ -79,6 +88,7 @@
     "helpInfo": "Brug for help? {0}.",
     "help": "Læs manualen",
     "upgradesHeader": "Opgraderinger",
+    "updateFeedHeader": "News Feed",
     "installComplete": "Installation er færdig",
     "alreadyInstalled": "Allerede Installeret",
     "download": "Download",
@@ -103,7 +113,8 @@
     "clearLog": "Ryd log-filen",
     "copy404Urls": "Kopiér 404 URL'er",
     "uploadLog": "Upload Log",
-    "copiedToClipboard": "Kopieret til udklipsholder"
+    "copiedToClipboard": "Kopieret til udklipsholder",
+    "openLogsWindow": "Open Logs Window"
   },
   "app": {
     "home": "Hjem",
@@ -266,7 +277,7 @@
     "thumbnail": "Thumbnail",
     "screenshot": "Skærmbillede",
     "dropImageHere": "Sæt et billede her for at tilføje det",
-    "noGameSelected": "Ingen Spil Valgt",
+    "noGameSelected": "No {0} Selected",
     "clickToSelectGame": "Klik på et spil for at vælge it.",
     "deleteAdditionalApplication": "Slet Additionel Applikation",
     "deleteGameAndAdditionalApps": "Slet Spil (og Additionelle Applikationer)",
@@ -288,7 +299,10 @@
     "saveAndRestart": "Gem & Genstart",
     "thereAreNoGames": "Der er ingen spil.",
     "noGameMatchedDesc": "Ingen game titel har matchet din søgning.",
-    "noGameMatchedSearch": "Prøv at søge på noget mindre restriktivt."
+    "noGameMatchedSearch": "Prøv at søge på noget mindre restriktivt.",
+    "mountParameters": "Mount Parameters",
+    "noMountParameters": "No Mount Parameters",
+    "showExtremeScreenshot": "Show Extreme Screenshot"
   },
   "tags": {
     "name": "Navn",
@@ -318,16 +332,16 @@
     "importAllDesc": "Importer alle kurationer som er indlæst lige nu",
     "deleteAll": "Slet Alle",
     "deleteAllDesc": "Slet alle kurationer, der i øjeblikket er indlæst",
-    "saveImportedCurations": "Gem Importerede Curations",
+    "saveImportedCurations": "Gem Importerede Kurationer",
     "keepArchiveKey": "Behold Kuration Arkiv UUID",
     "symlinkCurationContent": "Symlink Curation Content Folder (Admin prompts på Windows, Kræves for MAD4FP)",
     "useTagFilters": "Use Tag Filters in Suggestions",
-    "openCurationsFolder": "Curations Mappe",
-    "openCurationsFolderDesc": "Åbn Curations mappen i explorer",
-    "openExportsFolder": "Eksporterede Kurser",
-    "openExportsFolderDesc": "Åbn standard Eksporter mappe der indeholder dine eksporterede curations.",
-    "openImportedFolder": "Importerede Kurser",
-    "openImportedFolderDesc": "Åbn standardmappen Importerede kurver, der indeholder dine importerede kurver.",
+    "openCurationsFolder": "Kurationer Mappe",
+    "openCurationsFolderDesc": "Åbn Kurationer mappen i explorer",
+    "openExportsFolder": "Eksporterede Kurationer",
+    "openExportsFolderDesc": "Åbn standard Eksporter mappe der indeholder dine eksporterede kurationer.",
+    "openImportedFolder": "Importerede Kurationer",
+    "openImportedFolderDesc": "Åbn standardmappen Importerede kurationer, der indeholder dine importerede kurationer.",
     "newCuration": "Ny Kuration",
     "newCurationDesc": "Opretter en ny kuration med en unik mappe",
     "loadMeta": "Indlæs Meta",
@@ -338,7 +352,7 @@
     "loadFolderDesc": "Indlæls en eller mere af kuration foldere",
     "scanNewCurationFolders": "Scan For New Curations",
     "scanNewCurationFoldersDesc": "Scans for curations that have been added after the initial scan",
-    "noCurations": "Ingen Kurser",
+    "noCurations": "Ingen Kurationer",
     "id": "Kuration Mappe",
     "heading": "Overskrift",
     "noHeading": "Ingen Overskrift",
@@ -413,7 +427,9 @@
     "installingFiles": "Installerer filer...",
     "complete": "Færdig",
     "exportMetaEditTitle": "Eksporter Meta Rediger",
-    "exportMetaEditDesc": "Vælg alle egenskaber at eksportere:"
+    "exportMetaEditDesc": "Vælg alle egenskaber at eksportere:",
+    "showImage": "Show Image",
+    "searching": "Searching..."
   },
   "menu": {
     "viewThumbnailInFolder": "Vis Thumbnail i Folderen",
@@ -469,17 +485,17 @@
     "overwriteFileMessage": "En fil med samme navn findes allerede. Vil du overskrive den?",
     "overwriteFileDetail": "Fil sti:",
     "deleteTagFilterGroup": "Delete this Tag Filter Group?",
-    "deleteCuration": "Delete this Curation?",
+    "deleteCuration": "Slet denne kuration?",
     "importCuration": "Importér denne Curation?",
     "deleteGameImage": "Slet dette spil billede?",
     "deletePlaylist": "Slet denne Spilleliste?",
     "importAllCurations": "Import all Curations?",
-    "deleteAllCurations": "Delete all Curations?",
+    "deleteAllCurations": "Slet alle kuratione?",
     "removePlaylistGame": "Fjern dette spil fra spillelisten?",
     "deleteGame": "Slet dette spil? Dette kan ikke fortrydes.",
     "deleteGameData": "Slet dette spildata? Dette kan ikke fortrydes.",
     "deleteAddApp": "Slet denne Tilføj app?",
-    "deleteTagCategory": "Delete this Tag Category?",
+    "deleteTagCategory": "Slet dette Tag Kategori?",
     "deleteTag": "Slet dette Tag?",
     "deleteTagAlias": "Slet dette Tag Alias?",
     "deleteSource": "Slet denne kilde?",
@@ -492,10 +508,13 @@
   },
   "libraries": {
     "arcade": "Spil",
+    "arcadeSingular": "Game",
     "arcadePlural": "Alle Spil",
     "theatre": "Animationer",
+    "theatreSingular": "Animation",
     "theatrePlural": "Alle Animationer",
     "auditorium": "NG Auditorium",
+    "auditoriumSingular": "Animation",
     "auditoriumPlural": "Alle NG Animationer"
   },
   "upgrades": {
