--- a/lang/es-ES.json
+++ b/lang/es-ES.json
@@ -4,8 +4,16 @@
     "configHeader": "Configuración",
     "configDesc": "(Debes presionar 'Guardar y Reiniciar' para que algunos cambios surtan efecto)",
     "preferencesHeader": "Preferencias",
-    "extremeGames": "Extreme Content",
-    "extremeGamesDesc": "Allow tags inside 'Extreme' tag filter groups and corresponding games to be shown.",
+    "extremeGames": "Mostrar Filtros Extremos",
+    "extremeGamesDesc": "Allows Extreme tag filters to be toggled, created and modified to control content unsuitable for children.",
+    "hideExtremeScreenshots": "Hide Extreme Screenshots",
+    "hideExtremeScreenshotsDesc": "Hides screenshots of Extreme tagged content, can be unhidden with a click on the image box.",
+    "fancyAnimations": "Animaciones elegantes",
+    "fancyAnimationsDesc": "Enable fancy animations in the launcher.",
+    "searchLimit": "Límite de búsqueda",
+    "searchLimitDesc": "Limit the number of results returned in any search",
+    "searchLimitUnlimited": "Ilimitado",
+    "searchLimitValue": "{0} resultados",
     "enableEditing": "Habilitar la edición",
     "enableEditingDesc": "Hablitar la edición de juegos y aplicaciones adicionales. También muestra pestañas relacionadas con la edición.",
     "onDemandImages": "Imágenes bajo demanda",
@@ -16,6 +24,7 @@
     "fallbackLanguageDesc": "Qué idioma usar en caso de que el idioma actual este incompleto.",
     "auto": "Automático ({0})",
     "none": "Ninguno",
+    "contentFiltersHeader": "Content Filters",
     "flashpointHeader": "Flashpoint",
     "flashpointPath": "Ruta de Flashpoint",
     "flashpointPathDesc": "Ruta de la carpeta Flashpoint (puede ser relativa)",
@@ -28,11 +37,11 @@
     "nativePlatforms": "Plataformas nativas",
     "nativePlatformsDesc": "Usar versiones nativas de estas plataformas. (Si no está disponible, utilizará Wine)",
     "tagFilterGroups": "Grupos de filtros de etiquetas",
-    "tagFilterGroupsDesc": "Estos grupos filtraran sugerencias y juegos afuera de los resultados de búsqueda",
+    "tagFilterGroupsDesc": "Estos grupos filtrarán sugerencias y juegos afuera de los resultados de búsqueda",
     "editTagFilter": "Editar grupo de filtros de etiquetas",
     "duplicateTagFilter": "Duplicar grupo de filtros de etiquetas",
     "deleteTagFilter": "Eliminar grupo de filtros de etiquetas",
-    "appPathOverrides": "Reemplazos de Rutas de Aplicación",
+    "appPathOverrides": "Reemplazos de rutas de aplicación",
     "appPathOverridesDesc": "Reemplaza la ruta de la aplicación de la izquierda con la de la derecha al iniciar juegos.",
     "visualsHeader": "Visuales",
     "useCustomTitleBar": "Usar barra de título personalizada",
@@ -79,6 +88,7 @@
     "helpInfo": "¿Necesitas Ayuda? {0}.",
     "help": "Lee el manual",
     "upgradesHeader": "Mejoras",
+    "updateFeedHeader": "News Feed",
     "installComplete": "Instalación completada",
     "alreadyInstalled": "Ya instalado",
     "download": "Descargar",
@@ -103,7 +113,8 @@
     "clearLog": "Limpiar el registro",
     "copy404Urls": "Copiar las URLs 404",
     "uploadLog": "Subir registro",
-    "copiedToClipboard": "Copiado al portapapeles"
+    "copiedToClipboard": "Copiado al portapapeles",
+    "openLogsWindow": "Open Logs Window"
   },
   "app": {
     "home": "Inicio",
@@ -177,9 +188,9 @@
     "importTags": "Importar etiquetas",
     "importTagsDesc": "Importa etiquetas desde un archivo creado por 'Exportar etiquetas'",
     "migrateExtremeGames": "Migrar juegos extremos",
-    "migrateExtremeGamesDesc": "Remueve 'Extremo' de cualquier juego y asigna la etiqueta 'LEGACY-Extremo' a ellos",
-    "massImportGameData": "Mass Import Game Data",
-    "massImportGameDataDesc": "Mass imports Game Data packs, attempting to match their filename to a games UUID.",
+    "migrateExtremeGamesDesc": "Remueve 'Extreme' de cualquier juego y asigna la etiqueta 'LEGACY-Extreme' a ellos",
+    "massImportGameData": "Importar en masa datos de juego",
+    "massImportGameDataDesc": "Importa en masa paquetes de datos de juego, tratando de igualar su nombre de archivo al UUID de un juego.",
     "servicesHeader": "Servicios en segundo plano",
     "servicesMissing": "No hay servicios.",
     "running": "Corriendo",
@@ -266,7 +277,7 @@
     "thumbnail": "Miniatura",
     "screenshot": "Captura de pantalla",
     "dropImageHere": "Suelta una imagen aquí para agregarla",
-    "noGameSelected": "Ningún juego seleccionado",
+    "noGameSelected": "No {0} Selected",
     "clickToSelectGame": "Haz clic en un juego para seleccionarlo.",
     "deleteAdditionalApplication": "Eliminar aplicación adicional",
     "deleteGameAndAdditionalApps": "Eliminar juego (y aplicaciones adicionales)",
@@ -288,7 +299,10 @@
     "saveAndRestart": "Guardar y reiniciar",
     "thereAreNoGames": "No hay juegos.",
     "noGameMatchedDesc": "Ningún título de un juego coincide con tu búsqueda.",
-    "noGameMatchedSearch": "Intenta buscar algo menos restrictivo."
+    "noGameMatchedSearch": "Intenta buscar algo menos restrictivo.",
+    "mountParameters": "Mount Parameters",
+    "noMountParameters": "No Mount Parameters",
+    "showExtremeScreenshot": "Show Extreme Screenshot"
   },
   "tags": {
     "name": "Nombre",
@@ -371,7 +385,7 @@
     "nonExistingLibrary": "'Biblioteca' no es el nombre de una biblioteca existente! (La predeterminada será usada)",
     "nonContentFolders": "Carpetas diferentes a 'content' encontradas en la carpeta de curación. ¿Deberían estar ahí?",
     "noTags": "No hay etiquetas en esta curación.",
-    "noSource": "'Source' is a required field.",
+    "noSource": "'Fuente' es un campo obligatorio.",
     "unenteredTag": "El campo de texto de etiquetas no ha sido enviado.",
     "noLogo": "No hay logotipo en esta curacion.",
     "noScreenshot": "No hay captura de pantalla en esta curación.",
@@ -413,7 +427,9 @@
     "installingFiles": "Instalando archivos...",
     "complete": "Completado",
     "exportMetaEditTitle": "Exportar correcciones de metadatos",
-    "exportMetaEditDesc": "Selecciona todas las propiedades a exportar:"
+    "exportMetaEditDesc": "Selecciona todas las propiedades a exportar:",
+    "showImage": "Mostrar imagen",
+    "searching": "Searching..."
   },
   "menu": {
     "viewThumbnailInFolder": "Ver miniatura en la carpeta",
@@ -463,7 +479,7 @@
     "areYouSurePlaylistRemove": "¿Está seguro que desea eliminar esta entrada de la lista de reproducción?",
     "cancel": "Cancelar",
     "mergePlaylists": "Combinar listas de reproducción",
-    "newPlaylist": "Mantener separados",
+    "newPlaylist": "Mantener separadas",
     "uploadPrivacyWarning": "Esto hará que sus registros estén disponibles públicamente.\nSe copiará un enlace al portapapeles.\n\n¿Está seguro?",
     "overwriteFileTitle": "¡El archivo ya existe!",
     "overwriteFileMessage": "Ya existe un archivo con el mismo nombre. ¿Desea sobrescribirlo?",
@@ -484,18 +500,21 @@
     "deleteTagAlias": "¿Eliminar este alias de etiqueta?",
     "deleteSource": "¿Eliminar esta fuente?",
     "uninstallGame": "¿Desinstalar este juego?",
-    "unableToUninstallGameData": "No se pudo eliminar el paquete de datos. ¿Está en uso? Intenta reiniciar el lanzador.",
-    "unableToDeleteGame": "No se pudo eliminar el juego. ¿Está en uso? Intenta reiniciar el lanzador.",
+    "unableToUninstallGameData": "No se pudo eliminar el paquete de datos. ¿Está en uso? Intenta reiniciar la aplicación.",
+    "unableToDeleteGame": "No se pudo eliminar el juego. ¿Está en uso? Intenta reiniciar la aplicación.",
     "downloadingGame": "Descargando juego...",
     "verifyingGame": "Verificando juego...",
     "aFewMinutes": "Esto puede tomar unos minutos."
   },
   "libraries": {
     "arcade": "Juegos",
+    "arcadeSingular": "Game",
     "arcadePlural": "Todos los juegos",
     "theatre": "Animaciones",
+    "theatreSingular": "Animation",
     "theatrePlural": "Todas las animaciones",
     "auditorium": "Auditorio NG",
+    "auditoriumSingular": "Animation",
     "auditoriumPlural": "Todas las animaciones NG"
   },
   "upgrades": {
