--- a/lang/fi-FI.json
+++ b/lang/fi-FI.json
@@ -4,8 +4,16 @@
     "configHeader": "Asetukset",
     "configDesc": "(Käyttäjän on valittava 'Tallennus ja uudelleenkäynnistys' jotta valinnat jäävät voimaan)",
     "preferencesHeader": "Asetukset",
-    "extremeGames": "Extreme Content",
-    "extremeGamesDesc": "Allow tags inside 'Extreme' tag filter groups and corresponding games to be shown.",
+    "extremeGames": "Näytä lisää suodattimia",
+    "extremeGamesDesc": "Allows Extreme tag filters to be toggled, created and modified to control content unsuitable for children.",
+    "hideExtremeScreenshots": "Piilota Äärimmäiset Kuvakaappaukset",
+    "hideExtremeScreenshotsDesc": "Hides screenshots of Extreme tagged content, can be unhidden with a click on the image box.",
+    "fancyAnimations": "Hienot animaatiot",
+    "fancyAnimationsDesc": "Ota hienot animaatiot käyttöön launcherissa.",
+    "searchLimit": "Hakuraja",
+    "searchLimitDesc": "Limit the number of results returned in any search",
+    "searchLimitUnlimited": "Rajaton",
+    "searchLimitValue": "{0} tulosta",
     "enableEditing": "Muokkaustila",
     "enableEditingDesc": "Ota käyttöön pelien ja muiden sovellusten muokkaus. Näyttää myös muokkaukseen liittyvät välilehdet.",
     "onDemandImages": "Kysyntää Koskevissa Kuvissa",
@@ -16,6 +24,7 @@
     "fallbackLanguageDesc": "Mikä kieli näytetään, jos ensisijaisen kielen käännökset puuttuvat.",
     "auto": "Automaattinen kielivalinta ({0})",
     "none": "Ei mitään",
+    "contentFiltersHeader": "Sisältösuodattimet",
     "flashpointHeader": "Flashpoint",
     "flashpointPath": "Flashpointin ohjelmistopolun",
     "flashpointPathDesc": "Kiintolevyn ohjelmistopolku Flashpointin kansioon (voi olla relatiivinen)",
@@ -23,7 +32,7 @@
     "libraries": "Kirjastot",
     "randomLibraries": "Satunnaiset Kirjastot",
     "randomLibrariesDesc": "Kirjastot, joita käytetään satunnaisille Pickeille kotisivulla.",
-    "updateSource": "Update Source",
+    "updateSource": "Päivitä Lähde",
     "platforms": "Alustat",
     "nativePlatforms": "Natiivialustat",
     "nativePlatformsDesc": "Käytä natiiviversioita näistä alustoista. (Ei saatavilla jos Wine on käytössä)",
@@ -57,7 +66,7 @@
     "extLogoSets": "Logon Sarja(t)",
     "extApplications": "Sovellukset",
     "saveAndRestart": "Tallenna ja uudelleenkäynnistä",
-    "saveAndClose": "Save and Close",
+    "saveAndClose": "Tallenna ja Sulje",
     "tagFilterGroupEditor": "Tag Filter Group Editor"
   },
   "home": {
@@ -79,6 +88,7 @@
     "helpInfo": "Oletko hukassa? Avun löydät {0}.",
     "help": "Lue käsikirja",
     "upgradesHeader": "Päivitykset",
+    "updateFeedHeader": "Uutissyöte",
     "installComplete": "Asennus valmis",
     "alreadyInstalled": "Asennettu valmiiksi",
     "download": "Lataa",
@@ -103,7 +113,8 @@
     "clearLog": "Tyhjennä lokitiedosto",
     "copy404Urls": "Kopioi 404 URL-osoitteet",
     "uploadLog": "Lataa Loki",
-    "copiedToClipboard": "Kopioitu leikepöydälle"
+    "copiedToClipboard": "Kopioitu leikepöydälle",
+    "openLogsWindow": "Avaa Loki-Ikkuna"
   },
   "app": {
     "home": "Koti",
@@ -258,15 +269,15 @@
     "searching": "Etsitään...",
     "library": "Kirjasto",
     "defaultLibrary": "Oletuskirjasto",
-    "uninstallGame": "Uninstall Game",
-    "installed": "Installed",
-    "notInstalled": "Not Installed",
-    "legacyGame": "Legacy Game",
-    "download": "Download",
+    "uninstallGame": "Poista Peli",
+    "installed": "Asennettu",
+    "notInstalled": "Ei Asennettu",
+    "legacyGame": "Legacy Peli",
+    "download": "Lataa",
     "thumbnail": "Kuvake",
     "screenshot": "Ruutukaappaus",
     "dropImageHere": "Raahaa tänne kuvatiedosto lisätäksesi sen",
-    "noGameSelected": "Ei peliä valittuna",
+    "noGameSelected": "Ei {0} Valittu",
     "clickToSelectGame": "Klikkaa peliä valitaksesi sen.",
     "deleteAdditionalApplication": "Poista lisäohjelma",
     "deleteGameAndAdditionalApps": "Poista peli (ja lisäohjelmat)",
@@ -288,7 +299,10 @@
     "saveAndRestart": "Tallennus ja uudelleenkäynnistys",
     "thereAreNoGames": "Pelejä ei löydy.",
     "noGameMatchedDesc": "Ei hakua vastaavia pelejä.",
-    "noGameMatchedSearch": "Yritä etsiä yleisemmillä hakusanoilla."
+    "noGameMatchedSearch": "Yritä etsiä yleisemmillä hakusanoilla.",
+    "mountParameters": "Mount Parameters",
+    "noMountParameters": "No Mount Parameters",
+    "showExtremeScreenshot": "Show Extreme Screenshot"
   },
   "tags": {
     "name": "Nimi",
@@ -413,13 +427,15 @@
     "installingFiles": "Asennetaan tiedostoja...",
     "complete": "Valmis",
     "exportMetaEditTitle": "Vie Meta Muokkaus",
-    "exportMetaEditDesc": "Valitse kaikki vietävät ominaisuudet:"
+    "exportMetaEditDesc": "Valitse kaikki vietävät ominaisuudet:",
+    "showImage": "Näytä kuva",
+    "searching": "Haetaan..."
   },
   "menu": {
     "viewThumbnailInFolder": "Katso kuvaketta kansiossa",
     "viewScreenshotInFolder": "Katso ruutukaappausta kansiossa",
     "openFileLocation": "Avaa tiedoston sijainti",
-    "addToPlaylist": "Add to Playlist",
+    "addToPlaylist": "Lisää soittolistaan",
     "duplicateMetaOnly": "Kopioi (Vain metatiedot)",
     "duplicateMetaAndImages": "Kopioi (Meta ja kuvat)",
     "copyGameUUID": "Kopioi Pelin UUID",
@@ -459,7 +475,7 @@
     "restartNow": "Käynnistä nyt?",
     "restartToApplyUpgrade": "Tämä päivitys ei tapahdu ennen kuin käynnistät ohjelman uudelleen? Haluatko tehdä sen nyt?",
     "areYouSure": "Oletko varma?",
-    "areYouSureDelete": "Are you sure you want to delete this entry?",
+    "areYouSureDelete": "Oletko varma, että haluat poistaa tämän kohteen?",
     "areYouSurePlaylistRemove": "Are you sure you want to remove this entry from the playlist?",
     "cancel": "Peruuta",
     "mergePlaylists": "Yhdistä Soittolistat",
@@ -472,30 +488,33 @@
     "deleteCuration": "Delete this Curation?",
     "importCuration": "Import this Curation?",
     "deleteGameImage": "Delete this Game Image?",
-    "deletePlaylist": "Delete this Playlist?",
+    "deletePlaylist": "Poistetaanko tämä soittolista?",
     "importAllCurations": "Import all Curations?",
     "deleteAllCurations": "Delete all Curations?",
     "removePlaylistGame": "Remove this Game from the Playlist?",
     "deleteGame": "Delete this Game? This cannot be undone.",
     "deleteGameData": "Delete this Game Data? This cannot be undone.",
-    "deleteAddApp": "Delete this Add App?",
-    "deleteTagCategory": "Delete this Tag Category?",
-    "deleteTag": "Delete this Tag?",
+    "deleteAddApp": "Poistetaanko tämä Lisä sovellus?",
+    "deleteTagCategory": "Poistetaanko tämän Tagin Kategoria?",
+    "deleteTag": "Poista tämä Tagi?",
     "deleteTagAlias": "Delete this Tag Alias?",
-    "deleteSource": "Delete this Source?",
-    "uninstallGame": "Uninstall this Game?",
-    "unableToUninstallGameData": "Unable to delete data pack. Is it in use? Try restarting the launcher.",
-    "unableToDeleteGame": "Unable to delete game. Is it in use? Try restarting the launcher.",
-    "downloadingGame": "Downloading Game...",
-    "verifyingGame": "Verifying Game...",
-    "aFewMinutes": "This may take a few minutes."
+    "deleteSource": "Poistetaanko tämä lähde?",
+    "uninstallGame": "Poista tämä peli?",
+    "unableToUninstallGameData": "Datapakettia ei voida poistaa. Onko se käytössä? Yritä käynnistää launcher uudelleen.",
+    "unableToDeleteGame": "Peliä ei voi poistaa. Onko se käytössä? Yritä käynnistää launcher uudelleen.",
+    "downloadingGame": "Ladataan Peliä...",
+    "verifyingGame": "Vahvistetaan Peliä...",
+    "aFewMinutes": "Tämä saattaa viedä hetken."
   },
   "libraries": {
     "arcade": "Pelit",
+    "arcadeSingular": "Peli",
     "arcadePlural": "Kaikki Pelit",
     "theatre": "Animaatiot",
+    "theatreSingular": "Animaatio",
     "theatrePlural": "Kaikki animaatiot",
     "auditorium": "NG Auditorium",
+    "auditoriumSingular": "Animaatio",
     "auditoriumPlural": "Kaikki NG-animaatiot"
   },
   "upgrades": {
