--- a/lang/fil-PH.json
+++ b/lang/fil-PH.json
@@ -4,8 +4,16 @@
     "configHeader": "Config",
     "configDesc": "(Pindutin ang 'Save & Restart' upang maisave ang mga pagbabago)",
     "preferencesHeader": "Preperensiya",
-    "extremeGames": "Extreme Content",
-    "extremeGamesDesc": "Allow tags inside 'Extreme' tag filter groups and corresponding games to be shown.",
+    "extremeGames": "Show Extreme Filters",
+    "extremeGamesDesc": "Allows Extreme tag filters to be toggled, created and modified to control content unsuitable for children.",
+    "hideExtremeScreenshots": "Hide Extreme Screenshots",
+    "hideExtremeScreenshotsDesc": "Hides screenshots of Extreme tagged content, can be unhidden with a click on the image box.",
+    "fancyAnimations": "Fancy Animations",
+    "fancyAnimationsDesc": "Enable fancy animations in the launcher.",
+    "searchLimit": "Search Limit",
+    "searchLimitDesc": "Limit the number of results returned in any search",
+    "searchLimitUnlimited": "Unlimited",
+    "searchLimitValue": "{0} Results",
     "enableEditing": "Pahintulutan ang Pagbabago",
     "enableEditingDesc": "I-enable ang pag-edit ng mga laro at mga aplikasyon. Pati na rin ang pag-kita ng mga tab na may kaugnay sa pag-edit.",
     "onDemandImages": "On Demand na Imahe",
@@ -16,6 +24,7 @@
     "fallbackLanguageDesc": "Anong wika ang ibig mong gamitin sakali na hindi kumpleto ang napiling wika.",
     "auto": "Auto ({0})",
     "none": "None",
+    "contentFiltersHeader": "Content Filters",
     "flashpointHeader": "Flashpoint",
     "flashpointPath": "Lokasyon ng Flashpoint",
     "flashpointPathDesc": "Lokasyon ng Flashpoint folder (pwedeng kaugnay)",
@@ -23,15 +32,15 @@
     "libraries": "Mga Librerya",
     "randomLibraries": "Random na Librerya",
     "randomLibrariesDesc": "Libreryang gagamitin para sa Random Picks sa home page.",
-    "updateSource": "Update Source",
+    "updateSource": "I-update ang mga Source",
     "platforms": "Platforms",
     "nativePlatforms": "Orihinal na Platforms",
     "nativePlatformsDesc": "Gamitin ang orihinal na bersyon ng mga platforms. (Kung hindi maari, Wine ang gagamitin)",
-    "tagFilterGroups": "Tag Filter Groups",
-    "tagFilterGroupsDesc": "These groups will filter suggestions and games out of search results",
-    "editTagFilter": "Edit Tag Filter Group",
-    "duplicateTagFilter": "Duplicate Tag Filter Group",
-    "deleteTagFilter": "Delete Tag Filter Group",
+    "tagFilterGroups": "Pangkat ng Tag Filter",
+    "tagFilterGroupsDesc": "Ang mga pangkat na ito ay kayang I-filter ang mga payo at ang mga laro sa labas ng resulta ng paghahanap",
+    "editTagFilter": "I-edit ang mga Pangkat ng Tag Filter",
+    "duplicateTagFilter": "I-doble ang mga Pangkat ng Tag Filter",
+    "deleteTagFilter": "I-delete ang mga Pangkat ng Tag Filter",
     "appPathOverrides": "Mga Override ng App Path",
     "appPathOverridesDesc": "Ino-override ang landas ng application sa kaliwa gamit ang isa sa kanan kapag naglulunsad ng mga laro.",
     "visualsHeader": "Mga Biswal",
@@ -57,8 +66,8 @@
     "extLogoSets": "Mga Set ng Logo",
     "extApplications": "(Mga) Application",
     "saveAndRestart": "Isave at irestart",
-    "saveAndClose": "Save and Close",
-    "tagFilterGroupEditor": "Tag Filter Group Editor"
+    "saveAndClose": "I-save at isara",
+    "tagFilterGroupEditor": "Taga-edit ng Pangkat ng Tag Filter"
   },
   "home": {
     "updateHeader": "I-update ang Launcher",
@@ -76,9 +85,10 @@
     "allAnimations": "Lahat ng Animasyon",
     "configInfo": "May gusto kang baguhin? Pumunta sa {0}.",
     "config": "Config",
-    "helpInfo": "Kailangan mo ng tulong? {0}.",
+    "helpInfo": "Kailangan ng tulong? {0}.",
     "help": "Basahin ang manual",
     "upgradesHeader": "I-upgrade",
+    "updateFeedHeader": "News Feed",
     "installComplete": "Nakompleto na ang pag-install",
     "alreadyInstalled": "Naka-install na",
     "download": "I-download",
@@ -103,7 +113,8 @@
     "clearLog": "Burahin ang Log",
     "copy404Urls": "I-kopya ang 404 URLs",
     "uploadLog": "Log ng pag-upload",
-    "copiedToClipboard": "Nakopya sa Clipboard"
+    "copiedToClipboard": "Nakopya sa Clipboard",
+    "openLogsWindow": "Open Logs Window"
   },
   "app": {
     "home": "Home",
@@ -116,10 +127,10 @@
     "curate": "Curate",
     "developer": "Developer",
     "searchPlaceholder": "Hanapin...",
-    "hideRightSidebar": "Itago ang right sidebar",
-    "showRightSidebar": "Ipakita ang right sidebar",
-    "hideLeftSidebar": "Itago ang left sidebar",
-    "showLeftSidebar": "Ibakita ang left sidebar",
+    "hideRightSidebar": "Itago ang kanang sidebar",
+    "showRightSidebar": "Ipakita ang kanang sidebar",
+    "hideLeftSidebar": "Itago ang kaliwang sidebar",
+    "showLeftSidebar": "Ipakita ang left sidebar",
     "total": "Total",
     "newGame": "Bagong Laro",
     "list": "Listahan",
@@ -139,14 +150,14 @@
   },
   "developer": {
     "developerHeader": "Developer",
-    "developerDesc": "Nandito lahat ng developer tools.",
-    "checkMissingImages": "Tingnan ang lahat ng Nawawalang Imahe",
-    "checkMissingImagesDesc": "Ilista lahat ng laro na walang thumbnail o screenshot",
-    "checkGameIds": "Tingnan ang Game IDs",
+    "developerDesc": "Nandito ang lahat ng mga kailangang developer tools.",
+    "checkMissingImages": "Tingnan ang lahat ng mga Nawawalang Imahe",
+    "checkMissingImagesDesc": "Ilista ang lahat ng laro na walang thumbnail o screenshot",
+    "checkGameIds": "Tingnan ang mga Game IDs",
     "checkGameIdsDesc": "Ilista lahat ng laro na may nadoble o maling IDs",
-    "checkGameTitles": "Tingnan ang Game Titles",
+    "checkGameTitles": "Tingnan ang mga Game Titles",
     "checkGameTitlesDesc": "Ipakita lahat ng mga laro na nadoble sa iisang platform",
-    "checkGameFields": "Tingnan ang Game Fields",
+    "checkGameFields": "Tingnan ang mga Game Fields",
     "checkGameFieldsDesc": "Ipakita lahat ng mga laro na may walang nakasulat sa fields (fields na hindi dapat blanko)",
     "checkPlaylists": "Tingnan ang Playlists",
     "checkPlaylistsDesc": "Ipakita lahat ng mga playlists na may nadoble o maling IDs, o mga laro na may kulang, maling, o nadobleng IDs",
@@ -176,8 +187,8 @@
     "exportTagsDesc": "Gumawa ng file na puno ng mga tag at kategorya ng tag na maaring gagamitin sa 'I-import ang mga tag'",
     "importTags": "I-import ang mga tag",
     "importTagsDesc": "I-import ang mga tag mula sa file na ginawa ng 'I-export ang tag'",
-    "migrateExtremeGames": "Migrate Extreme Games",
-    "migrateExtremeGamesDesc": "Removes 'Extreme' from any games and assigns the 'LEGACY-Extreme' tag to them",
+    "migrateExtremeGames": "Ilipat ang mga Extreme na Laro",
+    "migrateExtremeGamesDesc": "Tatanggalin ang 'Extreme' sa anumang laro at I-aassign ang 'LEGACY-Extreme' tag sa mga ito",
     "massImportGameData": "Mass Import Game Data",
     "massImportGameDataDesc": "Mass imports Game Data packs, attempting to match their filename to a games UUID.",
     "servicesHeader": "Background Services",
@@ -258,15 +269,15 @@
     "searching": "Hinahanap...",
     "library": "Aklatan",
     "defaultLibrary": "Default na aklatan",
-    "uninstallGame": "Uninstall Game",
-    "installed": "Installed",
-    "notInstalled": "Not Installed",
-    "legacyGame": "Legacy Game",
-    "download": "Download",
+    "uninstallGame": "I-uninstall ang Laro",
+    "installed": "Naka-install",
+    "notInstalled": "Hindi naka-install",
+    "legacyGame": "Legacy na Laro",
+    "download": "I-download",
     "thumbnail": "Thumbnail",
     "screenshot": "Screenshot",
     "dropImageHere": "Ilagay ang imahe dito para madagdag",
-    "noGameSelected": "Walang larong nakapili",
+    "noGameSelected": "No {0} Selected",
     "clickToSelectGame": "I-click ang laro para mapili.",
     "deleteAdditionalApplication": "I-tangal ang Karagdagang Aplikasyon",
     "deleteGameAndAdditionalApps": "I-tangal ang laro (at ang Karagdagang Aplikasyon)",
@@ -288,7 +299,10 @@
     "saveAndRestart": "I-save at i-restart",
     "thereAreNoGames": "Walang laro dito.",
     "noGameMatchedDesc": "Walang titulo ng laro ang nag-match sa na-search mo.",
-    "noGameMatchedSearch": "Subukan mo i-search na di-gaanong strikto."
+    "noGameMatchedSearch": "Subukan mo i-search na di-gaanong strikto.",
+    "mountParameters": "Mount Parameters",
+    "noMountParameters": "No Mount Parameters",
+    "showExtremeScreenshot": "Show Extreme Screenshot"
   },
   "tags": {
     "name": "Pangalan",
@@ -321,7 +335,7 @@
     "saveImportedCurations": "I-save ang mga na-import na curation",
     "keepArchiveKey": "Panatilihin ang Curation Archive UUID",
     "symlinkCurationContent": "Folder ng Symlink Curation Content (May admin prompt sa Windows, kailangan para sa MAD4FP)",
-    "useTagFilters": "Use Tag Filters in Suggestions",
+    "useTagFilters": "Gamitin ang Tag Filter sa mga payo",
     "openCurationsFolder": "Curations Folder",
     "openCurationsFolderDesc": "I-buksan ang \"Curations Folder\" sa explorer",
     "openExportsFolder": "Mga na-export na curation",
@@ -336,8 +350,8 @@
     "loadArchiveDesc": "Iload ang isa o higit pang Curation archives",
     "loadFolder": "Iload ang Folder",
     "loadFolderDesc": "Iload ang isa o higit pang Curation folders",
-    "scanNewCurationFolders": "Scan For New Curations",
-    "scanNewCurationFoldersDesc": "Scans for curations that have been added after the initial scan",
+    "scanNewCurationFolders": "I-hanap ang mga bagong Curation",
+    "scanNewCurationFoldersDesc": "I-hanap ang mga curation na naka-dagdag pagtapos ng pagsimulang hanap",
     "noCurations": "Walang Curations",
     "id": "Curation Folder",
     "heading": "Pamagat",
@@ -370,14 +384,14 @@
     "unusedPlatform": "Ang 'Platform' ay mali. Tiyaking tama ang baybay nito!",
     "nonExistingLibrary": "Ang 'Library' ay mali! (Default ang gagamitin)",
     "nonContentFolders": "May mga folders sa Curation folder na hindi kasali. Kasama ba talaga sila doon?",
-    "noTags": "There are no tags on this curation.",
-    "noSource": "'Source' is a required field.",
-    "unenteredTag": "The Tags text field hasn't been submitted.",
-    "noLogo": "There is no logo on this curation.",
-    "noScreenshot": "There is no screenshot on this curation.",
+    "noTags": "Walang tag sa curation na ito.",
+    "noSource": "'Source' ang kailangan.",
+    "unenteredTag": "Ang Tags text field ay hindi naka-submit.",
+    "noLogo": "Walang logo sa curation na ito.",
+    "noScreenshot": "Walang screenshot sa curation na ito.",
     "ilc_notHttp": "Gamitin ang HTTP.",
     "ilc_nonExistant": "Piliin ang file sa inyong curation's 'content' folder.",
-    "sort": "Sort Curations (A-Z)"
+    "sort": "I-sort ang mga Curation (A-Z)"
   },
   "playlist": {
     "enterDescriptionHere": "Maglagay ng deskripsyon dito...",
@@ -413,13 +427,15 @@
     "installingFiles": "Iniinstall ang mga files...",
     "complete": "Kumpleto na ang upgrade",
     "exportMetaEditTitle": "I-Export ang mga Meta Edits",
-    "exportMetaEditDesc": "I-select ang lahat ng mga property para I-export:"
+    "exportMetaEditDesc": "I-select ang lahat ng mga property para I-export:",
+    "showImage": "Show Image",
+    "searching": "Searching..."
   },
   "menu": {
     "viewThumbnailInFolder": "Ipakita ang Thumbnail sa folder",
     "viewScreenshotInFolder": "Ipakita ang Screenshot sa Folder",
     "openFileLocation": "Buksan ang File Location",
-    "addToPlaylist": "Add to Playlist",
+    "addToPlaylist": "I-dagdag sa Playlist",
     "duplicateMetaOnly": "Iduplicate (Meta)",
     "duplicateMetaAndImages": "Iduplicate (Meta at mga Larawan)",
     "copyGameUUID": "I-kopya ang Game UUID",
@@ -459,8 +475,8 @@
     "restartNow": "I-restart ngayon?",
     "restartToApplyUpgrade": "Ang upgrade na ito ay hindi mai-install hanggang sa mag-restart ka.\nNais mo bang gawin ito ngayon?",
     "areYouSure": "Sigurado ka ba?",
-    "areYouSureDelete": "Are you sure you want to delete this entry?",
-    "areYouSurePlaylistRemove": "Are you sure you want to remove this entry from the playlist?",
+    "areYouSureDelete": "Sigurado kang gusto mong I-delete ang entry na ito?",
+    "areYouSurePlaylistRemove": "Sigurado kang gusto mong I-delete ang entry sa playlist na ito?",
     "cancel": "Kanselahin",
     "mergePlaylists": "I-merge ang mga playlist",
     "newPlaylist": "Stay Separate",
@@ -492,10 +508,13 @@
   },
   "libraries": {
     "arcade": "Laro",
+    "arcadeSingular": "Game",
     "arcadePlural": "Lahat ng Laro",
     "theatre": "Animasyon",
+    "theatreSingular": "Animation",
     "theatrePlural": "Lahat ng Animasyon",
     "auditorium": "NG Auditorium",
+    "auditoriumSingular": "Animation",
     "auditoriumPlural": "Lahat ng NG Animasyon"
   },
   "upgrades": {
