--- a/lang/nl-NL.json
+++ b/lang/nl-NL.json
@@ -4,8 +4,16 @@
     "configHeader": "Instellingen",
     "configDesc": "(Druk op 'Opslaan & Herstarten om enkele wijzigingen door te voeren)",
     "preferencesHeader": "Voorkeuren",
-    "extremeGames": "Extreme inhoud",
-    "extremeGamesDesc": "Allow tags inside 'Extreme' tag filter groups and corresponding games to be shown.",
+    "extremeGames": "Toon Extreme Filters",
+    "extremeGamesDesc": "Maakt het mogelijk om Extreme tag-filters aan te zetten, te maken en aan te passen aan inhoud die niet geschikt is voor kinderen.",
+    "hideExtremeScreenshots": "Extreme Screenshots Verbergen",
+    "hideExtremeScreenshotsDesc": "Verbergt screenshots van Extreme-gelabelde inhoud, kan niet worden verborgen met een klik op de afbeeldingsbox.",
+    "fancyAnimations": "Mooie Animaties",
+    "fancyAnimationsDesc": "Inschakelen van mooie animaties in de launcher.",
+    "searchLimit": "Zoek Limiet",
+    "searchLimitDesc": "Beperk het aantal resultaten dat bij elke zoekopdracht wordt verkregen",
+    "searchLimitUnlimited": "Onbeperkt",
+    "searchLimitValue": "{0} Resultaten",
     "enableEditing": "Bewerken inschakelen",
     "enableEditingDesc": "Bewerken inschakelen voor spellen en extra applicaties. Toont ook de gerelateerde tabbladen voor het bewerken.",
     "onDemandImages": "Aangevraagde afbeeldingen",
@@ -16,6 +24,7 @@
     "fallbackLanguageDesc": "Verandert de taal naar jouw alternatieve taal als er onvolledige taalpakketen zijn.",
     "auto": "Automatisch ({0})",
     "none": "Geen",
+    "contentFiltersHeader": "Inhoud Filters",
     "flashpointHeader": "Flashpoint",
     "flashpointPath": "Flashpoint pad",
     "flashpointPathDesc": "Pad naar de Flashpoint map (kan relatief zijn)",
@@ -23,15 +32,15 @@
     "libraries": "Bibliotheken",
     "randomLibraries": "Willekeurige bibliotheken",
     "randomLibrariesDesc": "Bibliotheken voor het gebruik van de willekeurige keuzes op de startpagina.",
-    "updateSource": "Bronnen aan het updaten",
+    "updateSource": "Bron bijwerken",
     "platforms": "Platformen",
     "nativePlatforms": "Oorspronkelijke platformen",
     "nativePlatformsDesc": "Gebruik originele versies van deze platformen. (Indien niet beschikbaar zal het 'Wine' gebruiken)",
-    "tagFilterGroups": "Tag Filter Groups",
-    "tagFilterGroupsDesc": "These groups will filter suggestions and games out of search results",
-    "editTagFilter": "Edit Tag Filter Group",
-    "duplicateTagFilter": "Duplicate Tag Filter Group",
-    "deleteTagFilter": "Delete Tag Filter Group",
+    "tagFilterGroups": "Label filtergroepen",
+    "tagFilterGroupsDesc": "Deze groepen zullen suggesties en spellen filteren uit de zoekresultaten",
+    "editTagFilter": "Labelfilter groep bewerken",
+    "duplicateTagFilter": "Dubbele labelfiltersgroep",
+    "deleteTagFilter": "Labelfiltersgroep verwijderen",
     "appPathOverrides": "App Pad overschrijvingen",
     "appPathOverridesDesc": "Overschrijft het toepassingstraject links met degene aan de rechterkant bij het starten van games.",
     "visualsHeader": "Uiterlijk",
@@ -58,7 +67,7 @@
     "extApplications": "Applicatie(s)",
     "saveAndRestart": "Opslaan en herstarten",
     "saveAndClose": "Opslaan en Afsluiten",
-    "tagFilterGroupEditor": "Tag Filter Group Editor"
+    "tagFilterGroupEditor": "Label filtergroep bewerker"
   },
   "home": {
     "updateHeader": "Launcher Update",
@@ -79,6 +88,7 @@
     "helpInfo": "Hulp nodig? {0}.",
     "help": "Lees de handleiding",
     "upgradesHeader": "Upgraden",
+    "updateFeedHeader": "Nieuwsfeed",
     "installComplete": "Installatie voltooid",
     "alreadyInstalled": "Reeds geïnstalleerd",
     "download": "Downloaden",
@@ -103,7 +113,8 @@
     "clearLog": "Wis de logs",
     "copy404Urls": "Kopieer 404 URL's",
     "uploadLog": "Uploaden van logs",
-    "copiedToClipboard": "Gekopieerd naar klembord"
+    "copiedToClipboard": "Gekopieerd naar klembord",
+    "openLogsWindow": "Open Logs Window"
   },
   "app": {
     "home": "Thuis",
@@ -176,10 +187,10 @@
     "exportTagsDesc": "Maakt een bestand met tags en tag categorieën die kunnen worden gebruikt door 'Labels importeren'",
     "importTags": "Labels importeren",
     "importTagsDesc": "Labels importeren van een bestand gemaakt door 'Labels exporteren'",
-    "migrateExtremeGames": "Migrate Extreme Games",
-    "migrateExtremeGamesDesc": "Removes 'Extreme' from any games and assigns the 'LEGACY-Extreme' tag to them",
-    "massImportGameData": "Mass Import Game Data",
-    "massImportGameDataDesc": "Mass imports Game Data packs, attempting to match their filename to a games UUID.",
+    "migrateExtremeGames": "Migreer Extreme Games",
+    "migrateExtremeGamesDesc": "Verwijdert 'Extreme' uit alle spellen en wijst de 'LEGACY-Extreme' label toe aan hen",
+    "massImportGameData": "Groepsgewijs Spelgegevens importeren",
+    "massImportGameDataDesc": "Massa importeren van Spelgegevenspakketten, probeert hun bestandsnaam te koppelen aan een spellen UUID.",
     "servicesHeader": "Achtergrondservices",
     "servicesMissing": "Er zijn geen services.",
     "running": "Actief",
@@ -258,15 +269,15 @@
     "searching": "Bezig met zoeken...",
     "library": "Bibliotheek",
     "defaultLibrary": "Standaard bibliotheek",
-    "uninstallGame": "Uninstall Game",
-    "installed": "Installed",
-    "notInstalled": "Not Installed",
-    "legacyGame": "Legacy Game",
-    "download": "Download",
+    "uninstallGame": "Verwijder spel",
+    "installed": "Geïnstalleerd",
+    "notInstalled": "Niet geïnstalleerd",
+    "legacyGame": "Legacy Spel",
+    "download": "Downloaden",
     "thumbnail": "Miniatuur",
     "screenshot": "Schermafbeelding",
     "dropImageHere": "Plaats hier een afbeelding om hem toe te voegen",
-    "noGameSelected": "Geen spel geselecteerd",
+    "noGameSelected": "No {0} Selected",
     "clickToSelectGame": "Klik op een spel om het te selecteren.",
     "deleteAdditionalApplication": "Extra toepassingen verwijderen",
     "deleteGameAndAdditionalApps": "Spel verwijderen (en zijn extra toepassingen)",
@@ -288,7 +299,10 @@
     "saveAndRestart": "Opslaan en herstarten",
     "thereAreNoGames": "Er zijn geen spellen.",
     "noGameMatchedDesc": "Er is geen speltitel die overeenkomt met uw zoekopdracht.",
-    "noGameMatchedSearch": "Probeer naar iets gemakkelijker te zoeken."
+    "noGameMatchedSearch": "Probeer naar iets gemakkelijker te zoeken.",
+    "mountParameters": "Koppel Parameters",
+    "noMountParameters": "Geen Koppel Parameters",
+    "showExtremeScreenshot": "Extreme Schermafbeelding Weergeven"
   },
   "tags": {
     "name": "Naam",
@@ -321,7 +335,7 @@
     "saveImportedCurations": "Sla geïmporteerde curaties op",
     "keepArchiveKey": "Houd Curatie-Archief UUID",
     "symlinkCurationContent": "Symlink inhoud map voor curatie (Admin aanvragingen in Windows, vereist voor MAD4FP)",
-    "useTagFilters": "Use Tag Filters in Suggestions",
+    "useTagFilters": "Gebruik Tag Filters in Suggesties",
     "openCurationsFolder": "Curatie map",
     "openCurationsFolderDesc": "Open de curatiesmap in de verkenner",
     "openExportsFolder": "Geëxporteerde curaties",
@@ -336,8 +350,8 @@
     "loadArchiveDesc": "Laadt één of meer curatie-archieven",
     "loadFolder": "Laadt map",
     "loadFolderDesc": "Laadt één of meer curatie-mappen",
-    "scanNewCurationFolders": "Scan For New Curations",
-    "scanNewCurationFoldersDesc": "Scans for curations that have been added after the initial scan",
+    "scanNewCurationFolders": "Scan voor nieuwe curaties",
+    "scanNewCurationFoldersDesc": "Scan voor curaties die zijn toegevoegd na de eerste scan",
     "noCurations": "Geen curaties",
     "id": "Curatie-map",
     "heading": "Kop",
@@ -370,14 +384,14 @@
     "unusedPlatform": "'Platform' heeft een ongebruikte waarde. Zorg ervoor dat het correct gespeld is!",
     "nonExistingLibrary": "'Bibliotheek' is niet de naam van een bestaande bibliotheek! (Standaard wordt gebruikt)",
     "nonContentFolders": "Niet-inhoudsmappen gevonden in curatie folder. Mogen ze er feitelijk wel zijn?",
-    "noTags": "There are no tags on this curation.",
-    "noSource": "'Source' is a required field.",
-    "unenteredTag": "The Tags text field hasn't been submitted.",
-    "noLogo": "There is no logo on this curation.",
-    "noScreenshot": "There is no screenshot on this curation.",
+    "noTags": "Deze curatie heeft geen labels.",
+    "noSource": "'Bron' is een verplicht veld.",
+    "unenteredTag": "Het veld 'Label' is niet ingediend.",
+    "noLogo": "Deze curatie heeft geen logo.",
+    "noScreenshot": "Deze curatie heeft geen schermafbeelding.",
     "ilc_notHttp": "Gebruik HTTP.",
     "ilc_nonExistant": "Richt een bestaand bestand naar de curatie 'inhouds'-map.",
-    "sort": "Sort Curations (A-Z)"
+    "sort": "Curaties sorteren (A-Z)"
   },
   "playlist": {
     "enterDescriptionHere": "Voer hier een beschrijving in...",
@@ -413,13 +427,15 @@
     "installingFiles": "Bestanden installeren...",
     "complete": "Voltooid",
     "exportMetaEditTitle": "Exporteren van Metadata wijziging",
-    "exportMetaEditDesc": "Selecteer alle eigenschappen om te exporteren:"
+    "exportMetaEditDesc": "Selecteer alle eigenschappen om te exporteren:",
+    "showImage": "Afbeelding Weergeven",
+    "searching": "Searching..."
   },
   "menu": {
     "viewThumbnailInFolder": "Miniatuur in map bekijken",
     "viewScreenshotInFolder": "Schermafbeelding in map bekijken",
     "openFileLocation": "Open bestandslocatie",
-    "addToPlaylist": "Add to Playlist",
+    "addToPlaylist": "Toevoegen aan afspeellijst",
     "duplicateMetaOnly": "Dupliceren (Metadata alleen)",
     "duplicateMetaAndImages": "Dupliceren (Metadata && Afbeeldingen)",
     "copyGameUUID": "Kopieer Spel-ID (UUID)",
@@ -459,43 +475,46 @@
     "restartNow": "Wil je herstarten?",
     "restartToApplyUpgrade": "Deze upgrade wordt pas toegepast nadat u opnieuw bent opgestart.\nWilt u dit nu doen?",
     "areYouSure": "Weet je het zeker?",
-    "areYouSureDelete": "Are you sure you want to delete this entry?",
-    "areYouSurePlaylistRemove": "Are you sure you want to remove this entry from the playlist?",
+    "areYouSureDelete": "Weet u zeker dat u dit item wilt verwijderen?",
+    "areYouSurePlaylistRemove": "Weet je zeker dat je dit item uit de afspeellijst wilt verwijderen?",
     "cancel": "Annuleren",
     "mergePlaylists": "Afspeellijsten samenvoegen",
-    "newPlaylist": "Stay Separate",
-    "uploadPrivacyWarning": "This will make your Logs available publicly.\nA link will be copied to your clipboard.\n\nAre you sure?",
+    "newPlaylist": "Blijf gescheiden",
+    "uploadPrivacyWarning": "Hiermee worden uw Logboeken publiekelijk beschikbaar gemaakt.\nEen link wordt gekopieerd naar uw klembord.\n\nWeet u het zeker?",
     "overwriteFileTitle": "Dit bestand bestaat al!",
     "overwriteFileMessage": "Er bestaat al een bestand met dezelfde naam. Wil je het overschrijven?",
     "overwriteFileDetail": "Bestandspad:",
-    "deleteTagFilterGroup": "Delete this Tag Filter Group?",
-    "deleteCuration": "Delete this Curation?",
-    "importCuration": "Import this Curation?",
-    "deleteGameImage": "Delete this Game Image?",
-    "deletePlaylist": "Delete this Playlist?",
-    "importAllCurations": "Import all Curations?",
-    "deleteAllCurations": "Delete all Curations?",
-    "removePlaylistGame": "Remove this Game from the Playlist?",
-    "deleteGame": "Delete this Game? This cannot be undone.",
-    "deleteGameData": "Delete this Game Data? This cannot be undone.",
-    "deleteAddApp": "Delete this Add App?",
-    "deleteTagCategory": "Delete this Tag Category?",
-    "deleteTag": "Delete this Tag?",
-    "deleteTagAlias": "Delete this Tag Alias?",
-    "deleteSource": "Delete this Source?",
+    "deleteTagFilterGroup": "Deze labelfiltersgroep verwijderen?",
+    "deleteCuration": "Deze curatie verwijderen?",
+    "importCuration": "Deze curatie importeren?",
+    "deleteGameImage": "Verwijder deze Spelafbeelding?",
+    "deletePlaylist": "Deze afspeellijst verwijderen?",
+    "importAllCurations": "Alle curaties importeren?",
+    "deleteAllCurations": "Alle curaties verwijderen?",
+    "removePlaylistGame": "Verwijder dit spel uit de afspeellijst?",
+    "deleteGame": "Verwijder dit spel? Dit kan niet ongedaan worden gemaakt.",
+    "deleteGameData": "Deze spelgegevens verwijderen? Dit kan niet ongedaan worden gemaakt.",
+    "deleteAddApp": "Verwijder de Toevoegde App?",
+    "deleteTagCategory": "Deze labelcategorie verwijderen?",
+    "deleteTag": "Dit label verwijderen?",
+    "deleteTagAlias": "Deze label-alias verwijderen?",
+    "deleteSource": "Deze bron verwijderen?",
     "uninstallGame": "Deze game verwijderen?",
-    "unableToUninstallGameData": "Unable to delete data pack. Is it in use? Try restarting the launcher.",
-    "unableToDeleteGame": "Unable to delete game. Is it in use? Try restarting the launcher.",
-    "downloadingGame": "Downloading Game...",
-    "verifyingGame": "Verifying Game...",
-    "aFewMinutes": "This may take a few minutes."
+    "unableToUninstallGameData": "Datapakket kan niet verwijderd worden. Is het in gebruik? Probeer het programma opnieuw te starten.",
+    "unableToDeleteGame": "Kan het spel niet verwijderen. Is het in gebruik? Probeer het programma opnieuw te starten.",
+    "downloadingGame": "Spel downloaden...",
+    "verifyingGame": "Spel verifiëren...",
+    "aFewMinutes": "Dit kan enkele minuten duren."
   },
   "libraries": {
     "arcade": "Spellen",
+    "arcadeSingular": "Game",
     "arcadePlural": "Alle spellen",
     "theatre": "Animaties",
+    "theatreSingular": "Animation",
     "theatrePlural": "Alle animaties",
     "auditorium": "NG Auditorium",
+    "auditoriumSingular": "Animation",
     "auditoriumPlural": "Alle NG animaties"
   },
   "upgrades": {
