--- a/lang/ro-RO.json
+++ b/lang/ro-RO.json
@@ -4,8 +4,16 @@
     "configHeader": "Configurări",
     "configDesc": "(Unele modificări necesită apăsarea pe „Salvare și Repornire“ pentru a fi aplicate)",
     "preferencesHeader": "Editați preferințele",
-    "extremeGames": "Extreme Content",
-    "extremeGamesDesc": "Allow tags inside 'Extreme' tag filter groups and corresponding games to be shown.",
+    "extremeGames": "Arată filtrele extreme",
+    "extremeGamesDesc": "Permite filtrele pentru jocurile extreme să fie comutate, create și modificate pentru a controla conținutul neadecvat pentru copii.",
+    "hideExtremeScreenshots": "Ascunde capturile de ecran extreme",
+    "hideExtremeScreenshotsDesc": "Ascunde capturile de ecran ale jocurilor cu eticheta „extrem“. Acțiunea poate fi anulată, apăsând pe cadranul imaginii.",
+    "fancyAnimations": "Animații detaliate",
+    "fancyAnimationsDesc": "Activează animațiile detaliate în lansator.",
+    "searchLimit": "Limită de căutare",
+    "searchLimitDesc": "Limitează numărul de rezultate returnate în orice căutare",
+    "searchLimitUnlimited": "Fără limită",
+    "searchLimitValue": "{0} rezultate",
     "enableEditing": "Activați editarea",
     "enableEditingDesc": "Activați editarea jocurilor și a aplicațiilor suplimentare. De asemenea, arată categorii legate de editare.",
     "onDemandImages": "Imagini la cerere",
@@ -16,6 +24,7 @@
     "fallbackLanguageDesc": "Limba folosită de lansator, în cazul în care limba principală e incompletă.",
     "auto": "Auto ({0})",
     "none": "Nimic selectat",
+    "contentFiltersHeader": "Filtre de conținut",
     "flashpointHeader": "Flashpoint",
     "flashpointPath": "Calea spre dosarul Flashpoint",
     "flashpointPathDesc": "Calea spre dosarul lansatorului Flashpoint (poate fi relativă)",
@@ -23,7 +32,7 @@
     "libraries": "Biblioteci",
     "randomLibraries": "Biblioteci aleatoare",
     "randomLibrariesDesc": "Biblioteci de utilizat pentru alegeri aleatorii de pe pagina principală.",
-    "updateSource": "Update Source",
+    "updateSource": "Actualizare sursă",
     "platforms": "Platforme",
     "nativePlatforms": "Platforme native",
     "nativePlatformsDesc": "Folosește versiuni native ale acestor platforme. (Dacă nu sunt disponibile, se vor folosi prin Wine)",
@@ -57,8 +66,8 @@
     "extLogoSets": "Set de logo-uri",
     "extApplications": "Aplicații",
     "saveAndRestart": "Salvare și repornire",
-    "saveAndClose": "Save and Close",
-    "tagFilterGroupEditor": "Tag Filter Group Editor"
+    "saveAndClose": "Salvare și închidere",
+    "tagFilterGroupEditor": "Editor de grup de filtre de etichete"
   },
   "home": {
     "updateHeader": "Actualizare lansator",
@@ -79,6 +88,7 @@
     "helpInfo": "Aveți nevoie de ajutor? {0}.",
     "help": "Citiți manualul",
     "upgradesHeader": "Suplimente",
+    "updateFeedHeader": "Flux de ştiri",
     "installComplete": "Instalare completă",
     "alreadyInstalled": "Instalat deja",
     "download": "Descărcați",
@@ -103,7 +113,8 @@
     "clearLog": "Goliți jurnalul",
     "copy404Urls": "Copiază URL-urile 404",
     "uploadLog": "Încarcă jurnalul",
-    "copiedToClipboard": "Copiat"
+    "copiedToClipboard": "Copiat",
+    "openLogsWindow": "Open Logs Window"
   },
   "app": {
     "home": "Pag. principală",
@@ -173,13 +184,13 @@
     "fixCommaTags": "Repară etichetele în care apar virgule",
     "fixCommaTagsDesc": "Împarte etichetele cu virgulă în mai multe etichete și le aplică tuturor jocurilor corespunzătoare",
     "exportTags": "Exportați etichete",
-    "exportTagsDesc": "Creează un fișier cu etichete și categorii de etichete care pot fi folosite de către operațiunea \"Importați etichete\"",
+    "exportTagsDesc": "Creează un fișier cu etichete și categorii de etichete care pot fi folosite prin operațiunea 'Importați etichete'",
     "importTags": "Importați etichete",
     "importTagsDesc": "Importați etichete dintr-un fișier creat cu operațiunea 'Exportă etichete'",
-    "migrateExtremeGames": "Migrate Extreme Games",
-    "migrateExtremeGamesDesc": "Removes 'Extreme' from any games and assigns the 'LEGACY-Extreme' tag to them",
-    "massImportGameData": "Mass Import Game Data",
-    "massImportGameDataDesc": "Mass imports Game Data packs, attempting to match their filename to a games UUID.",
+    "migrateExtremeGames": "Migrați jocurile extreme",
+    "migrateExtremeGamesDesc": "Elimină „extrem“ din toate jocurile și le asociază eticheta „ÎNVECHIT-extrem“",
+    "massImportGameData": "Importă date de joc în masă",
+    "massImportGameDataDesc": "Importă în masă pachete de date ale jocurilor, încercând să le asimileze numele cu ID-ul unic.",
     "servicesHeader": "Servicii ce rulează în fundal",
     "servicesMissing": "Nu există astfel de servicii.",
     "running": "Rulează",
@@ -208,22 +219,22 @@
     "specialThanks": "Mulțumiri deosebite"
   },
   "browse": {
-    "noTitle": "Nu este introdus niciun titlu",
-    "by": "de către",
+    "noTitle": "Indisponibil",
+    "by": "de",
     "play": "Jucați",
     "stop": "Oprire",
-    "noDeveloper": "Nu este introdus numele dezvoltatorului",
+    "noDeveloper": "Indisponibil",
     "alternateTitles": "Titluri alternative",
     "noAlternateTitles": "Fără titluri alternative",
     "tags": "Etichete",
     "noTags": "Fără etichete",
     "enterTag": "Introduceți eticheta",
     "series": "Seria",
-    "noSeries": "Nu este introdusă seria",
+    "noSeries": "Indisponibil",
     "publisher": "Site-ul de publicare",
-    "noPublisher": "Nu este introdus numele site-ului de publicare",
+    "noPublisher": "Indisponibil",
     "source": "Sursa",
-    "noSource": "Nu este introdusă adresa site-ului sursă",
+    "noSource": "Indisponibil",
     "platform": "Platformă",
     "noPlatform": "Nicio platformă selectată",
     "playMode": "Mod de joc",
@@ -231,11 +242,11 @@
     "status": "Stare",
     "noStatus": "Nicio stare selectată",
     "version": "Versiune",
-    "noVersion": "Nu este introdusă o versiune",
+    "noVersion": "Indisponibil",
     "releaseDate": "Data publicării",
     "noReleaseDate": "Data publicării necunoscută",
     "language": "Limba",
-    "noLanguage": "Nu este introdusă nicio limbă",
+    "noLanguage": "Indisponibil",
     "dateAdded": "Data adăugării",
     "dateModified": "Data modificării",
     "brokenInInfinity": "Nefuncțional în Flashpoint Infinity",
@@ -245,28 +256,28 @@
     "notes": "Note",
     "noNotes": "Nu există note",
     "originalDescription": "Descrierea originală a jocului",
-    "noOriginalDescription": "Nu este introdusă descrierea originală",
+    "noOriginalDescription": "Indisponibil",
     "additionalApplications": "Aplicații suplimentare",
-    "noName": "Nu este introdus un nume",
+    "noName": "Indisponibil",
     "launch": "Lansare",
     "autoRunBefore": "Lansare automată înainte",
     "waitForExit": "Așteptați pentru oprire",
     "applicationPath": "Calea aplicației",
-    "noApplicationPath": "Nu este introdusă calea aplicației",
+    "noApplicationPath": "Indisponibil",
     "launchCommand": "Comandă de lansare",
-    "noLaunchCommand": "Nu este introdusă comanda de lansare",
+    "noLaunchCommand": "Indisponibil",
     "searching": "Se caută...",
     "library": "Categorie",
     "defaultLibrary": "Categoria implicită",
-    "uninstallGame": "Uninstall Game",
+    "uninstallGame": "Dezinstalare joc",
     "installed": "Instalat",
     "notInstalled": "Nu e instalat",
-    "legacyGame": "Joc depășit",
+    "legacyGame": "Joc învechit",
     "download": "Descărcați",
     "thumbnail": "logo-ul jocului",
     "screenshot": "captură de ecran",
     "dropImageHere": "Glisați aici o imagine pentru a o adăuga",
-    "noGameSelected": "Niciun joc selectat",
+    "noGameSelected": "No {0} Selected",
     "clickToSelectGame": "Apăsați pe un joc pentru a-l selecta.",
     "deleteAdditionalApplication": "Înlăturați aplicația suplimentară",
     "deleteGameAndAdditionalApps": "Înlăturați jocul (împreună cu aplicațiile sale suplimentare)",
@@ -288,7 +299,10 @@
     "saveAndRestart": "Salvare și repornire",
     "thereAreNoGames": "Nu s-au găsit jocuri.",
     "noGameMatchedDesc": "Niciun joc nu se potrivește cu termenii de căutare.",
-    "noGameMatchedSearch": "Încercați alte cuvinte cheie."
+    "noGameMatchedSearch": "Încercați alte cuvinte cheie.",
+    "mountParameters": "Parametri de montare",
+    "noMountParameters": "Fără parametri de montare",
+    "showExtremeScreenshot": "Arată capturile de ecran extreme"
   },
   "tags": {
     "name": "Nume",
@@ -336,12 +350,12 @@
     "loadArchiveDesc": "Încărcați arhive de reparație",
     "loadFolder": "Încărcați dosare",
     "loadFolderDesc": "Încărcați dosare de reparație",
-    "scanNewCurationFolders": "Scan For New Curations",
-    "scanNewCurationFoldersDesc": "Scans for curations that have been added after the initial scan",
+    "scanNewCurationFolders": "Scanare pentru noi reparații",
+    "scanNewCurationFoldersDesc": "Scanează pentru reparații care au fost adăugate după scanarea inițială",
     "noCurations": "Fără reparații",
     "id": "Dosarul reparațiilor",
     "heading": "Nume",
-    "noHeading": "Nu a fost introdus numele aplicației suplimentare",
+    "noHeading": "Indisponibil",
     "folderName": "Dosarul suplimentelor",
     "noFolderName": "Nu a fost introdus un nume al dosarului",
     "message": "Mesaj de lansare",
@@ -370,18 +384,18 @@
     "unusedPlatform": "Platforma are o valoare nefolosită. Asigurați-vă că ați scris corect!",
     "nonExistingLibrary": "Categoria are un nume care nu coincide niciunei categorii predefinite. Se va folosi categoria implicită.",
     "nonContentFolders": "Au fost găsite dosare neutilizare în dosarul de reparații. Doriți să continuați astfel?",
-    "noTags": "There are no tags on this curation.",
-    "noSource": "'Source' is a required field.",
-    "unenteredTag": "The Tags text field hasn't been submitted.",
-    "noLogo": "There is no logo on this curation.",
-    "noScreenshot": "There is no screenshot on this curation.",
+    "noTags": "Nu există etichete pentru această reparație.",
+    "noSource": "Câmpul „sursă“ este necesar.",
+    "unenteredTag": "Câmpul de text al etichetei nu a fost specificat.",
+    "noLogo": "Nu există logo pentru această reparație.",
+    "noScreenshot": "Nu există captură de ecran pentru această reparație.",
     "ilc_notHttp": "Folosiți HTTP.",
     "ilc_nonExistant": "Selectați un fișier existent din dosarul reparației.",
-    "sort": "Sort Curations (A-Z)"
+    "sort": "Sortare reparații (de la A la Z)"
   },
   "playlist": {
     "enterDescriptionHere": "Iintroduceți descrierea aici...",
-    "noDescription": "Nu este introdusă o descriere",
+    "noDescription": "Indisponibil",
     "save": "Salvați",
     "saveDesc": "Salvați modificările făcute și încheiați editarea",
     "discard": "Renunțați",
@@ -399,7 +413,7 @@
     "noAuthor": "Nu este precizat autorul",
     "authorPlaceholder": "Introduceți numele autorului...",
     "id": "ID",
-    "by": "după",
+    "by": "de",
     "extreme": "matur"
   },
   "misc": {
@@ -413,7 +427,9 @@
     "installingFiles": "Se instalează fișierele...",
     "complete": "Finalizat",
     "exportMetaEditTitle": "Exportați modificări ale informațiilor jocurilor",
-    "exportMetaEditDesc": "Selectați proprietățile de exportat:"
+    "exportMetaEditDesc": "Selectați proprietățile de exportat:",
+    "showImage": "Arată imaginea",
+    "searching": "Searching..."
   },
   "menu": {
     "viewThumbnailInFolder": "Vizualizați imaginea în dosar",
@@ -463,39 +479,42 @@
     "areYouSurePlaylistRemove": "Sigur doriți să ștergeți această intrare?",
     "cancel": "Revocare",
     "mergePlaylists": "Îmbinați liste de jocuri",
-    "newPlaylist": "Stay Separate",
-    "uploadPrivacyWarning": "This will make your Logs available publicly.\nA link will be copied to your clipboard.\n\nAre you sure?",
+    "newPlaylist": "Păstrare separat",
+    "uploadPrivacyWarning": "Această acțiune va face jurnalele dv. publice și va copia linkul către acestea.\n\nDoriți să continuați?",
     "overwriteFileTitle": "Fişierul există deja!",
     "overwriteFileMessage": "Există deja un fișier cu acest nume! Doriți să suprascrieți fișierul existent?",
     "overwriteFileDetail": "Calea fișierului:",
-    "deleteTagFilterGroup": "Delete this Tag Filter Group?",
-    "deleteCuration": "Delete this Curation?",
-    "importCuration": "Import this Curation?",
-    "deleteGameImage": "Delete this Game Image?",
-    "deletePlaylist": "Delete this Playlist?",
-    "importAllCurations": "Import all Curations?",
-    "deleteAllCurations": "Delete all Curations?",
-    "removePlaylistGame": "Remove this Game from the Playlist?",
-    "deleteGame": "Delete this Game? This cannot be undone.",
-    "deleteGameData": "Delete this Game Data? This cannot be undone.",
-    "deleteAddApp": "Delete this Add App?",
-    "deleteTagCategory": "Delete this Tag Category?",
-    "deleteTag": "Delete this Tag?",
-    "deleteTagAlias": "Delete this Tag Alias?",
-    "deleteSource": "Delete this Source?",
-    "uninstallGame": "Uninstall this Game?",
-    "unableToUninstallGameData": "Unable to delete data pack. Is it in use? Try restarting the launcher.",
-    "unableToDeleteGame": "Unable to delete game. Is it in use? Try restarting the launcher.",
-    "downloadingGame": "Downloading Game...",
-    "verifyingGame": "Verifying Game...",
-    "aFewMinutes": "This may take a few minutes."
+    "deleteTagFilterGroup": "Ștergeți acest grup de filtre de etichete?",
+    "deleteCuration": "Ștergeți această reparație?",
+    "importCuration": "Importați această reparație?",
+    "deleteGameImage": "Ștergeți această imagine?",
+    "deletePlaylist": "Ștergeți această listă?",
+    "importAllCurations": "Importați toate reparațiile?",
+    "deleteAllCurations": "Ștergeți toate reparațiile?",
+    "removePlaylistGame": "Eliminați acest joc din listă?",
+    "deleteGame": "Ștergeți jocul? Acțiunea nu poate fi anulată.",
+    "deleteGameData": "Ștergeți datele jocului? Acțiunea nu poate fi anulată.",
+    "deleteAddApp": "Ștergeți această aplicație?",
+    "deleteTagCategory": "Ștergeți această categorie de etichete?",
+    "deleteTag": "Ștergeți această categorie?",
+    "deleteTagAlias": "Ștergeți acest nume de etichetă?",
+    "deleteSource": "Ștergeți această sursă?",
+    "uninstallGame": "Dezinstalați jocul?",
+    "unableToUninstallGameData": "Nu se poate șterge pachetul de date. Verificați dacă este în folosință sau reporniți lansatorul.",
+    "unableToDeleteGame": "Nu se poate șterge jocul. Verificați dacă este în folosință sau reporniți lansatorul.",
+    "downloadingGame": "Se descarcă jocul…",
+    "verifyingGame": "Se verifică jocul…",
+    "aFewMinutes": "Acțiunea poate dura câteva minute."
   },
   "libraries": {
     "arcade": "Jocuri",
+    "arcadeSingular": "Game",
     "arcadePlural": "Toate jocurile",
     "theatre": "Animații",
+    "theatreSingular": "Animation",
     "theatrePlural": "Toate animațiile",
     "auditorium": "NG Auditorium",
+    "auditoriumSingular": "Animation",
     "auditoriumPlural": "Toate animațiile NG"
   },
   "upgrades": {
