--- a/lang/tr-TR.json
+++ b/lang/tr-TR.json
@@ -2,10 +2,18 @@
   "name": "Türkçe",
   "config": {
     "configHeader": "Yapılandırma",
-    "configDesc": "(Bazı değişikliklerin meydana gelmesi için 'Kaydet & Yeniden Başlat'a basmanız gerekir)",
+    "configDesc": "(Bazı değişikliklerin güncellenmesi için 'Kaydet & Yeniden Başlat'a basmanız gerekiyor)",
     "preferencesHeader": "Tercihler",
-    "extremeGames": "Ekstrem İçerik",
-    "extremeGamesDesc": "'Ekstrem' etiket filtreleme grubu ve 'ekstrem' etiket filtreleme grubuna karşılık gelen oyunların gösterilmesine izin ver.",
+    "extremeGames": "Ekstrem Filtreleri Göster",
+    "extremeGamesDesc": "Çocuklar için uygun olmayan içeriği kontrol etmek için Ekstrem etiket filtrelerinin değiştirilmesine, oluşturulmasına ve değiştirilmesine izin verir.",
+    "hideExtremeScreenshots": "Ekstrem Ekran Görüntülerini Gizle",
+    "hideExtremeScreenshotsDesc": "Ekstrem olarak belirtilmiş içeriğin ekran görüntüleri gizlenir, fotoğrafa tıklanınca gizlenme kaldırılır.",
+    "fancyAnimations": "Süslü Animasyonlar",
+    "fancyAnimationsDesc": "Başlatıcıda süslü animasyonları etkinleştirin.",
+    "searchLimit": "Arama Limiti",
+    "searchLimitDesc": "Herhangi bir aramada döndürülen sonuç sayısını sınırlayın",
+    "searchLimitUnlimited": "Sınırsız",
+    "searchLimitValue": "{0} Sonuçlar",
     "enableEditing": "Değişikliklere İzin Ver",
     "enableEditingDesc": "Oyunların ve fazladan eklentilerin düzenlenmesine izin verir. Ayrıca düzenlemeye bağlı seçenekleri gösterir.",
     "onDemandImages": "İsteğe Bağlı Görüntüler",
@@ -16,10 +24,11 @@
     "fallbackLanguageDesc": "Tamamlanmamış mevcut dilin yerine hangi dilin kullanılacağını gösterir.",
     "auto": "Otomatik ({0})",
     "none": "Yok",
+    "contentFiltersHeader": "İçerik Filtreleri",
     "flashpointHeader": "Flashpoint",
     "flashpointPath": "Flashpoint Yolu",
     "flashpointPathDesc": "Flashpoint klasörüne yol (komşu olabilir)",
-    "browse": "Ara",
+    "browse": "Gözat",
     "libraries": "Kütüphaneler",
     "randomLibraries": "Rastgele Kütüphaneler",
     "randomLibrariesDesc": "Ana sayfada Rastgele Seçimler için kullanılabilen kütüphaneler.",
@@ -32,7 +41,7 @@
     "editTagFilter": "Etiket Filtreleme Grubunu Düzenle",
     "duplicateTagFilter": "Etiket Filtreleme Grubunu Kopyala",
     "deleteTagFilter": "Etiket Filtreleme Grubunu Sil",
-    "appPathOverrides": "Uygulama Yolu Çiğnemeleri",
+    "appPathOverrides": "Geçersiz Kılınmış Uygulama Yolları",
     "appPathOverridesDesc": "Oyunları çalıştırırken soldaki uygulama yolunu sağdakiyle geçersiz kılar.",
     "visualsHeader": "Görseller",
     "useCustomTitleBar": "Özel bir Başlık kullan",
@@ -67,7 +76,7 @@
     "updateAvailable": "Güncelleme Mevcut",
     "upToDate": "Güncel.",
     "downloadingUpdate": "Güncelleme İndiriliyor...",
-    "quickStartHeader": "Hızlı Başlatma",
+    "quickStartHeader": "Hızlı Başlat",
     "hallOfFameInfo": "En iyisinin en iyisini mi istiyorsun? {0}'a göz at!",
     "hallOfFame": "En İyiler",
     "allGamesInfo": "Oynayacak bir şeyler mi bakıyorsun? {0}'a bak.",
@@ -79,6 +88,7 @@
     "helpInfo": "Yardım mı lazım? {0}.",
     "help": "Kullanım kılavuzunu oku",
     "upgradesHeader": "Güncellemeler",
+    "updateFeedHeader": "Haber Akışı",
     "installComplete": "İndirme Tamamlandı",
     "alreadyInstalled": "Zaten Yüklü",
     "download": "İndir",
@@ -91,7 +101,7 @@
     "plannedFeatures": "Planladığımız içeriklere göz at!",
     "notesHeader": "Notlar",
     "notes": "Eğer sıkıntılarınız varsa kullanım kılavuzunu okumayı unutmayın.",
-    "linuxSupport": "Linux'ta Sıkıntı? {0}",
+    "linuxSupport": "Linux'taki Sıkıntılar? {0}",
     "linuxSupportLinkText": "SSS'i Aç",
     "randomPicks": "Rastgele Seçimler",
     "rerollPicks": "Seçimleri Yeniden Yuvarla"
@@ -103,7 +113,8 @@
     "clearLog": "Kayıtları Temizle",
     "copy404Urls": "404 URL'lerini kopyala",
     "uploadLog": "Kayıtları Yükle",
-    "copiedToClipboard": "Panoya Kopyalandı"
+    "copiedToClipboard": "Panoya Kopyalandı",
+    "openLogsWindow": "Open Logs Window"
   },
   "app": {
     "home": "Ana Sayfa",
@@ -127,7 +138,7 @@
     "searchResults": "Arama Sonuçları"
   },
   "filter": {
-    "dateAdded": "Eklenen Tarih",
+    "dateAdded": "Eklenme Tarihi",
     "dateModified": "Düzenlenme Tarihi",
     "platform": "Platform",
     "series": "Seriler",
@@ -140,17 +151,17 @@
   "developer": {
     "developerHeader": "Geliştirici",
     "developerDesc": "Bu tüm kullanışlı geliştirici aletlerinin gideceği yerdir.",
-    "checkMissingImages": "Eksik Resimleri Göster",
+    "checkMissingImages": "Eksik Resimleri Kontrol Et",
     "checkMissingImagesDesc": "Ekran görüntüsü ya da kapak resmi olmayan oyunları listele",
-    "checkGameIds": "Oyun IDlerini Göster",
+    "checkGameIds": "Oyun ID'lerini Kontrol Et",
     "checkGameIdsDesc": "Tüm geçersiz veya aynı IDlere sahip oyunları listele",
-    "checkGameTitles": "Oyun Başlıklarını Göster",
+    "checkGameTitles": "Oyun Başlıklarını Kontrol Et",
     "checkGameTitlesDesc": "Aynı platformdaki aynı başlıklara sahip olan oyunları listele",
-    "checkGameFields": "Oyun Alanlarını Göster",
+    "checkGameFields": "Oyun Alanlarını Kontrol Et",
     "checkGameFieldsDesc": "Boş alana sahip olan oyunları listele (ya da boş olmaması gereken alanları)",
-    "checkPlaylists": "Oyun Listelerini Göster",
+    "checkPlaylists": "Oyun Listelerini Kontrol Et",
     "checkPlaylistsDesc": "Eksik, geçersiz ya da aynı IDlere sahip oyun listelerini, ya da eksik, geçersiz ya da aynı IDlere sahip oyun girişlerini listele",
-    "checkGameFileLocation": "Oyun Dosya Konumunu Göster",
+    "checkGameFileLocation": "Oyun Dosya Konumunu Kontrol Et",
     "checkGameFileLocationDesc": "Dosya yollarına ayrıştırılamayan başlatma komutlarına sahip tüm oyunları listeleyin (Bu 'Dosya Konumunu Aç' fonksiyonu ile alakalı, oyunu başlatma ile değil)",
     "checkMissingExecMappings": "Eksik yürütme haritalarını denetle",
     "checkMissingExecMappingsDesc": "Win32, linux ve darwin için yürütme haritası eksiz olan eşsiz yürütücüleri listele",
@@ -175,7 +186,7 @@
     "exportTags": "Etiketleri Dışa Aktar",
     "exportTagsDesc": "'Etiketleri İçe Aktar' için kullanılabilen tamamen etiketler ve etiket kategorileriyle dolu bir dosya yaratır",
     "importTags": "Etiketleri İçe Aktar",
-    "importTagsDesc": "Etiketleri 'Etiketleri Dışa Aktar' dan yaratılan bir dosyadan içe aktarır",
+    "importTagsDesc": "\"Etiketleri Dışa Aktar\" ın Oluşturduğu bir Dosyadan Etiketleri İçe Aktarır",
     "migrateExtremeGames": "Ekstrem Oyunları Göç Ettir",
     "migrateExtremeGamesDesc": "Oyunlardan 'Ekstrem' etiketini kaldırır ve 'ESKİ-Ekstrem' etiketini atar",
     "massImportGameData": "Oyun Verilerini Topluca İçeri Aktar",
@@ -199,11 +210,11 @@
     "flashpoint": "BlueMaxima's Flashpoint",
     "flashpointDesc": "Bu saklama projesi başlatıcısının amacı, bir arşiv, müze ve ağ-tabanlı İnternet oyunlarının oynanabilir bir koleksiyonu olmaktır.",
     "website": "Web sitesi",
-    "flashpointLauncher": "Flashpoint Başlatıcı",
+    "flashpointLauncher": "Flashpoint Başlatıcısı",
     "flashpointLauncherDesc": "Flashpoint projesinden oyunlar aramak, düzenlemek ve oynamak için kullanılan açık-kaynak bir bilgisayar uygulamasıdır.",
     "version": "Sürüm",
     "license": "Lisans",
-    "licenseInfo": "MIT (daha fazla bilgi için 'LICENSE' dosyasını oku)",
+    "licenseInfo": "MIT (Daha fazla bilgi için 'LICENSE' dosyasını oku)",
     "creditsHeader": "Teşekkürler",
     "specialThanks": "Özel Teşekkürler"
   },
@@ -266,7 +277,7 @@
     "thumbnail": "Küçükresim",
     "screenshot": "Ekran görüntüsü",
     "dropImageHere": "Eklemek için bir resmi buraya bırakın",
-    "noGameSelected": "Seçili Oyun Yok",
+    "noGameSelected": "No {0} Selected",
     "clickToSelectGame": "Seçmek için bir oyuna tıklayın.",
     "deleteAdditionalApplication": "Ek Uygulamaları Sil",
     "deleteGameAndAdditionalApps": "Oyunu Sil (ve Ek Uygulamaları)",
@@ -288,7 +299,10 @@
     "saveAndRestart": "Kaydet & Yeniden Başlat",
     "thereAreNoGames": "Oyun yok.",
     "noGameMatchedDesc": "Aramanızla eşleşen bir oyun yok.",
-    "noGameMatchedSearch": "Daha az kısıtlayıcı bir şey aramayı deneyin."
+    "noGameMatchedSearch": "Daha az kısıtlayıcı bir şey aramayı deneyin.",
+    "mountParameters": "Bağlama Parametresi",
+    "noMountParameters": "Bağlama Parametresi yok",
+    "showExtremeScreenshot": "Ekstrem Ekran Görüntüsünü Göster"
   },
   "tags": {
     "name": "Adı",
@@ -321,7 +335,7 @@
     "saveImportedCurations": "İçe Aktarılmış Kürasyonları Kaydet",
     "keepArchiveKey": "Kürasyon Arşiv UUID'sini Sakla",
     "symlinkCurationContent": "Symlink Kürasyon İçeriği Klasörü (Windows'ta yönetici istemleri, MAD4FP için gerekli)",
-    "useTagFilters": "Önerilerde Etiket Filtreleri Kullan",
+    "useTagFilters": "Önerilerde Etiket Filtrelerini Kullan",
     "openCurationsFolder": "Kürasyonlar Klasörü",
     "openCurationsFolderDesc": "Kürasyonlar klasörünü dosya gezgininde aç",
     "openExportsFolder": "Dışa Aktarılmış Kürasyonlar",
@@ -365,7 +379,7 @@
     "noLaunchCommand": "'Çalışma Komudu' zorunlu bir alandır. İçe aktarmadan lütfen doldurunuz.",
     "invalidLaunchCommand": "'Çalışma Komudu' şu URL gereksinimlerini karşılamıyor:",
     "releaseDateInvalid": "'Yayınlanma Tarihi' YYYY-AA-GG şeklinde olmalıdır (ay ve günler isteğe bağlı).",
-    "unusedApplicationPath": "'Uygulama Yolu' kullanılmayan bir değer. Doğru yazıldığından emin olun!",
+    "unusedApplicationPath": "'Uygulama Yolu' kullanılmayan bir değere sahip. Doğru yazıldığından emin olun!",
     "unusedTags": "Bu etiketler başka bir oyunda yok. Doğru mu?",
     "unusedPlatform": "'Platform' kullanılmayan bir değere sahip. Doğru yazıldığından emin olun!",
     "nonExistingLibrary": "'Library' var olan bir arşivin ismi değil! (Varsayılan kullanılacak)",
@@ -413,7 +427,9 @@
     "installingFiles": "Dosyalar Yükleniyor...",
     "complete": "Tamamlandı",
     "exportMetaEditTitle": "Meta Düzenlemesini Dışa Aktar",
-    "exportMetaEditDesc": "Dışa aktarılacak tüm özellikleri seç:"
+    "exportMetaEditDesc": "Dışa aktarılacak tüm özellikleri seç:",
+    "showImage": "Resmi Göster",
+    "searching": "Searching..."
   },
   "menu": {
     "viewThumbnailInFolder": "Klasördeki küçükresmi İncele",
@@ -447,9 +463,9 @@
     "selectFolder": "Klasör Seç",
     "selectScreenshot": "Ekran Görüntüsü Seç",
     "selectThumbnail": "Küçükresim Seç",
-    "selectCurationFolder": "Kürasyon Klasörü ya da Klasörleri Seç",
-    "selectCurationArchive": "Kürasyon Arşivi ya da Arşivleri Seç",
-    "selectCurationMeta": "Kürasyon Metası ya da Metaları Seç",
+    "selectCurationFolder": "Kürasyon Klasörü ya da Klasörlerini Seç",
+    "selectCurationArchive": "Kürasyon Arşivi ya da Arşivlerini Seç",
+    "selectCurationMeta": "Kürasyon Metası ya da Metalarını Seç",
     "selectPlaylistToImport": "İçe Aktarılacak Oynama Listesini Seç",
     "selectFileToExportPlaylist": "Oynama Listesinin kaydedileceği dosyayı seç",
     "dataRequired": "Ek Bilgi Gerekli",
@@ -492,10 +508,13 @@
   },
   "libraries": {
     "arcade": "Oyunlar",
+    "arcadeSingular": "Game",
     "arcadePlural": "Tüm Oyunlar",
     "theatre": "Animasyonlar",
+    "theatreSingular": "Animation",
     "theatrePlural": "Tüm Animasyonlar",
     "auditorium": "NG Auditorium",
+    "auditoriumSingular": "Animation",
     "auditoriumPlural": "Tüm NG Animasyonları"
   },
   "upgrades": {
