--- a/lang/vi-VN.json
+++ b/lang/vi-VN.json
@@ -1,11 +1,19 @@
 {
-  "name": "tiếng Việt",
+  "name": "Tiếng Việt",
   "config": {
     "configHeader": "Cài đặt",
-    "configDesc": "(Bạn phải nhấn 'Lưu và Khởi động lại' thì vài thay đổi mới có hiệu lực)",
+    "configDesc": "(Bạn phải nhấn 'Lưu & Khởi động lại' thì vài thay đổi mới có hiệu lực)",
     "preferencesHeader": "Tuỳ chọn",
-    "extremeGames": "Extreme Content",
-    "extremeGamesDesc": "Allow tags inside 'Extreme' tag filter groups and corresponding games to be shown.",
+    "extremeGames": "Hiện bộ lọc nội dung phản cảm",
+    "extremeGamesDesc": "Cho phép bật - tắt, tạo và sửa các bộ lọc nhãn Phản cảm để kiểm soát nội dung không phù hợp với trẻ em.",
+    "hideExtremeScreenshots": "Ẩn ảnh chụp màn hình phản cảm",
+    "hideExtremeScreenshotsDesc": "Ẩn ảnh chụp màn hình của nội dung có nhãn Phản cảm, có thể hiện chỉ với một cái nhấp chuột lên khung ảnh.",
+    "fancyAnimations": "Hoạt ảnh bắt mắt",
+    "fancyAnimationsDesc": "Bật hoạt ảnh bắt mắt trong trình khởi chạy.",
+    "searchLimit": "Giới hạn tìm kiếm",
+    "searchLimitDesc": "Giới hạn số kết quả đã trả về trong bất cứ lần tìm kiếm nào",
+    "searchLimitUnlimited": "Không giới hạn",
+    "searchLimitValue": "{0} kết quả",
     "enableEditing": "Bật khả năng chỉnh sửa",
     "enableEditingDesc": "Cho phép sửa trò chơi và phần mềm đi kèm. Cũng hiện thêm các mục liên quan đến việc chỉnh sửa.",
     "onDemandImages": "Tải hình khi cần",
@@ -16,6 +24,7 @@
     "fallbackLanguageDesc": "Ngôn ngữ nào sẽ được sử dụng để thay thế cho ngôn ngữ chưa dịch xong.",
     "auto": "Tự động ({0})",
     "none": "Không có",
+    "contentFiltersHeader": "Bộ lọc nội dung",
     "flashpointHeader": "Flashpoint",
     "flashpointPath": "Đường dẫn Flashpoint",
     "flashpointPathDesc": "Đường dẫn đến thư mục Flashpoint (can be relative)",
@@ -27,11 +36,11 @@
     "platforms": "Nền tảng",
     "nativePlatforms": "Nền tảng gốc",
     "nativePlatformsDesc": "Dùng bản gốc của các nền tảng này. (Nếu không có sẵn thì sẽ dùng Wine)",
-    "tagFilterGroups": "Tag Filter Groups",
-    "tagFilterGroupsDesc": "These groups will filter suggestions and games out of search results",
-    "editTagFilter": "Edit Tag Filter Group",
-    "duplicateTagFilter": "Duplicate Tag Filter Group",
-    "deleteTagFilter": "Delete Tag Filter Group",
+    "tagFilterGroups": "Nhóm bộ lọc nhãn",
+    "tagFilterGroupsDesc": "Các nhóm này sẽ ẩn các đề xuất và trò chơi khỏi kết quả tìm kiếm",
+    "editTagFilter": "Chỉnh sửa nhóm bộ lọc nhãn",
+    "duplicateTagFilter": "Tạo bản sao của nhóm bộ lọc nhãn",
+    "deleteTagFilter": "Xóa nhóm bộ lọc nhãn",
     "appPathOverrides": "Ghi đè đường dẫn phần mềm",
     "appPathOverridesDesc": "Ghi đè đường dẫn phần mềm ở bên trái bằng đường dẫn ở bên phải khi khởi chạy trò chơi.",
     "visualsHeader": "Đồ hoạ",
@@ -47,7 +56,7 @@
     "showDeveloperTab": "Hiện mục Nhà phát triển",
     "showDeveloperTabDesc": "Hiện mục 'Nhà phát triển'. Hữu dụng nhất cho lập trình viên và người đóng góp.",
     "server": "Máy chủ",
-    "serverDesc": "Tiến trình máy chủ nào sẽ được khởi động khi mở trình khởi chạy.",
+    "serverDesc": "Tiến trình máy chủ sẽ khởi động khi mở trình khởi chạy.",
     "metadataServerHost": "Máy chủ lưu trữ siêu dữ liệu",
     "metadataServerHostDesc": "Máy chủ của máy chủ siêu dữ liệu. Được sử dụng để đồng bộ hóa thông tin trò chơi mới và cập nhật với trình khởi chạy.",
     "extensionsHeader": "Phần mở rộng",
@@ -58,7 +67,7 @@
     "extApplications": "Phần mềm",
     "saveAndRestart": "Lưu và Khởi động lại",
     "saveAndClose": "Lưu và thoát",
-    "tagFilterGroupEditor": "Tag Filter Group Editor"
+    "tagFilterGroupEditor": "Trình chỉnh sửa nhóm bộ lọc nhãn"
   },
   "home": {
     "updateHeader": "Cập nhật trình khởi chạy",
@@ -73,12 +82,13 @@
     "allGamesInfo": "Bạn muốn chơi trò gì đó? Xem {0}.",
     "allGames": "Tất cả trò chơi",
     "allAnimationsInfo": "Chỉ muốn coi thứ gì đó? Xem {0}.",
-    "allAnimations": "Tất cả hoạt hình",
+    "allAnimations": "Tất cả Hoạt hình",
     "configInfo": "Muốn thay đổi gì đó? Hãy sang {0}.",
     "config": "Cài đặt",
     "helpInfo": "Cần được giúp? {0}.",
     "help": "Đọc hướng dẫn",
     "upgradesHeader": "Nâng cấp",
+    "updateFeedHeader": "Bảng tin",
     "installComplete": "Cài đặt hoàn tất",
     "alreadyInstalled": "Đã cài rồi",
     "download": "Tải về",
@@ -103,7 +113,8 @@
     "clearLog": "Xoá bản ghi",
     "copy404Urls": "Chép URL 404",
     "uploadLog": "Tải lên bản ghi",
-    "copiedToClipboard": "Đã chép vào bộ nhớ tạm"
+    "copiedToClipboard": "Đã chép vào bộ nhớ tạm",
+    "openLogsWindow": "Mở cửa sổ nhật kí"
   },
   "app": {
     "home": "Trang chủ",
@@ -176,10 +187,10 @@
     "exportTagsDesc": "Tạo một tệp chứa tất cả nhãn và danh mục nhãn mà có thể dùng tính năng 'Nhập nhãn' để nhập vào phần mềm được",
     "importTags": "Nhập nhãn",
     "importTagsDesc": "Nhập nhãn từ một tệp được tạo bởi 'Xuất nhãn'",
-    "migrateExtremeGames": "Migrate Extreme Games",
-    "migrateExtremeGamesDesc": "Removes 'Extreme' from any games and assigns the 'LEGACY-Extreme' tag to them",
-    "massImportGameData": "Mass Import Game Data",
-    "massImportGameDataDesc": "Mass imports Game Data packs, attempting to match their filename to a games UUID.",
+    "migrateExtremeGames": "Dịch chuyển trò chơi phản cảm",
+    "migrateExtremeGamesDesc": "Xóa 'Phản cảm' khỏi mọi trò chơi và gán thẻ 'LEGACY-Extreme' cho chúng",
+    "massImportGameData": "Nhập hàng loạt dữ liệu trò chơi",
+    "massImportGameDataDesc": "Nhập hàng loạt gói Dữ liệu trò chơi, cố gắng khớp tên tệp của chúng với UUID trò chơi.",
     "servicesHeader": "Dịch vụ ngầm",
     "servicesMissing": "Không có dịch vụ nào.",
     "running": "Đang chạy",
@@ -239,7 +250,7 @@
     "dateAdded": "Ngày thêm",
     "dateModified": "Ngày sửa",
     "brokenInInfinity": "Hỏng (trong Infinity)",
-    "extreme": "Extreme",
+    "extreme": "Phản cảm",
     "playlistNotes": "Ghi chú của danh sách",
     "noPlaylistNotes": "Không có",
     "notes": "Ghi chú",
@@ -261,12 +272,12 @@
     "uninstallGame": "Gỡ trò chơi",
     "installed": "Đã cài",
     "notInstalled": "Chưa cài",
-    "legacyGame": "Legacy Game",
+    "legacyGame": "Trò chơi kế thừa",
     "download": "Tải về",
     "thumbnail": "Ảnh thu nhỏ",
     "screenshot": "Ảnh chụp màn hình",
     "dropImageHere": "Thả ảnh vào đây để thêm",
-    "noGameSelected": "Chưa chọn trò chơi",
+    "noGameSelected": "Không có {0} nào được chọn",
     "clickToSelectGame": "Nhấn một trò chơi để chọn.",
     "deleteAdditionalApplication": "Xoá phần mềm đi kèm",
     "deleteGameAndAdditionalApps": "Xoá trò chơi (và phần mềm đi kèm)",
@@ -282,13 +293,16 @@
     "dropGameOnLeft": "Kéo thả trò chơi vào một danh sách ở {0} để thêm vào danh sách đó.",
     "leftSidebar": "thanh bên trái",
     "setFlashpointPathQuestion": "Bạn đã chỉnh đường dẫn sang {0} ở mục {1} chưa?",
-    "flashpointPath": "đường dẫn Flashpoint",
+    "flashpointPath": "Đường dẫn Flashpoint",
     "config": "Cài đặt",
     "noteSaveAndRestart": "Lưu ý: Bạn phải nhấn {0} để thay đổi có hiệu lực.",
     "saveAndRestart": "Lưu & Khởi động lại",
     "thereAreNoGames": "Không có trò chơi nào cả.",
     "noGameMatchedDesc": "Không tìm thấy trò chơi phù hợp.",
-    "noGameMatchedSearch": "Hãy tìm từ khoá chung chung hơn."
+    "noGameMatchedSearch": "Hãy tìm từ khoá chung chung hơn.",
+    "mountParameters": "Tham Số Khởi Động Trò Chơi",
+    "noMountParameters": "Không có Tham Số Khởi Động Trò Chơi",
+    "showExtremeScreenshot": "Hiện ảnh chụp màn hình phản cảm"
   },
   "tags": {
     "name": "Tên",
@@ -321,7 +335,7 @@
     "saveImportedCurations": "Lưu bản đóng góp đã nhập",
     "keepArchiveKey": "Giữ UUID của tập tin nén của bản đóng góp",
     "symlinkCurationContent": "Bật Symlink cho thư mục chứa nội dung bản đóng góp (sẽ hiện thông báo yêu cầu quyền quản trị trên Windows, phải bật khi dùng MAD4FP)",
-    "useTagFilters": "Use Tag Filters in Suggestions",
+    "useTagFilters": "Sử dụng Bộ lọc thẻ trong Đề xuất",
     "openCurationsFolder": "Thư mục chứa bản đóng góp",
     "openCurationsFolderDesc": "Mở thư mục chứa bản đóng góp trong Explorer",
     "openExportsFolder": "Bản đóng góp đã xuất",
@@ -336,8 +350,8 @@
     "loadArchiveDesc": "Nạp một hay nhiều tập tin nén chứa bản đóng góp",
     "loadFolder": "Nạp thư mục",
     "loadFolderDesc": "Nạp một hay nhiều thư mục chứa bản đóng góp",
-    "scanNewCurationFolders": "Scan For New Curations",
-    "scanNewCurationFoldersDesc": "Scans for curations that have been added after the initial scan",
+    "scanNewCurationFolders": "Quét các cuộc tuyển chọn mới",
+    "scanNewCurationFoldersDesc": "Quét tìm kiếm đã được thêm vào sau lần quét đầu tiên",
     "noCurations": "Không có bản đóng góp nào",
     "id": "Thư mục chứa bản đóng góp",
     "heading": "Tiêu đề",
@@ -371,8 +385,8 @@
     "nonExistingLibrary": "'Thư viện' không phải là tên của một thư viện hiện có! (Sẽ dùng mặc định)",
     "nonContentFolders": "Tìm thấy thư mục không chứa nội dung trong thư mục chứa bản đóng góp. Thư mục đó có cần thiết không?",
     "noTags": "Bản đóng góp này không có nhãn.",
-    "noSource": "'Source' is a required field.",
-    "unenteredTag": "The Tags text field hasn't been submitted.",
+    "noSource": "'Nguồn' là trường bắt buộc.",
+    "unenteredTag": "Trường văn bản Thẻ chưa được gửi.",
     "noLogo": "Bản đóng góp này không có biểu trưng.",
     "noScreenshot": "Bản đóng góp này không có ảnh chụp màn hình.",
     "ilc_notHttp": "Dùng HTTP.",
@@ -400,7 +414,7 @@
     "authorPlaceholder": "Tác giả...",
     "id": "ID",
     "by": "của",
-    "extreme": "extreme"
+    "extreme": "phản cảm"
   },
   "misc": {
     "noBlankFound": "Không tìm thấy {0}",
@@ -413,7 +427,9 @@
     "installingFiles": "Đang cài đặt tập tin...",
     "complete": "Hoàn thành",
     "exportMetaEditTitle": "Xuất sửa đổi meta",
-    "exportMetaEditDesc": "Chọn tất cả thuộc tính cần xuất:"
+    "exportMetaEditDesc": "Chọn tất cả thuộc tính cần xuất:",
+    "showImage": "Hiện ảnh",
+    "searching": "Đang tìm kiếm..."
   },
   "menu": {
     "viewThumbnailInFolder": "Xem ảnh thu nhỏ trong thư mục",
@@ -442,13 +458,13 @@
     "importPlaylistAs": "Nhập danh sách dưới dạng",
     "selectFileToExportMeta": "Chọn tệp để lưu meta vào",
     "selectFolderToExportMetaAndImages": "Chọn thư mục để lưu meta và hình ảnh vào",
-    "replaceFilesQuestion": "Ghi đè tập tin?",
-    "exportedAlreadyExistsYesNo": "Một hoặc nhiều tệp được xuất đã tồn tại.\nBạn có muốn thay thế chúng không?",
+    "replaceFilesQuestion": "Ghi đè tệp?",
+    "exportedAlreadyExistsYesNo": "Một hoặc nhiều tệp được xuất đã tồn tại.\nBạn có muốn ghi đè chúng không?",
     "selectFolder": "Chọn thư mục",
     "selectScreenshot": "Chọn ảnh chụp màn hình",
     "selectThumbnail": "Chọn ảnh thu nhỏ",
     "selectCurationFolder": "Chọn (các) thư mục chứa bản đóng góp",
-    "selectCurationArchive": "Chọn (các) tập tin nén chứa bản đóng góp",
+    "selectCurationArchive": "Chọn (các) tệp nén chứa bản đóng góp",
     "selectCurationMeta": "Chọn (các) tệp tin meta của bản đóng góp",
     "selectPlaylistToImport": "Chọn danh sách muốn nhập",
     "selectFileToExportPlaylist": "Chọn tập tin để lưu danh sách vào",
@@ -459,48 +475,51 @@
     "restartNow": "Khởi động lại ngay?",
     "restartToApplyUpgrade": "Nâng cấp này sẽ không được áp dụng đến khi khởi động lại.\nBạn muốn khởi động lại ngay không?",
     "areYouSure": "Bạn có chắc?",
-    "areYouSureDelete": "Are you sure you want to delete this entry?",
-    "areYouSurePlaylistRemove": "Are you sure you want to remove this entry from the playlist?",
+    "areYouSureDelete": "Bạn có chắc chắn muốn xóa mục này không?",
+    "areYouSurePlaylistRemove": "Bạn có chắc chắn muốn xóa mục nhập này khỏi danh sách phát không?",
     "cancel": "Huỷ",
     "mergePlaylists": "Nhập danh sách",
     "newPlaylist": "Giữ riêng",
     "uploadPrivacyWarning": "Làm thế này sẽ công khai Bản ghi của bạn.\nMột liên kết sẽ được sao chép vào khay nhớ tạm.\n\nBạn có chắc không?",
     "overwriteFileTitle": "Tập tin đã tồn tại!",
-    "overwriteFileMessage": "Tồn tại một tệp cùng tên. Bạn có muốn ghi đè?",
+    "overwriteFileMessage": "Đã có tệp cùng tên. Bạn có muốn ghi đè?",
     "overwriteFileDetail": "Đường dẫn tập tin:",
-    "deleteTagFilterGroup": "Delete this Tag Filter Group?",
+    "deleteTagFilterGroup": "Xóa nhóm bộ lọc nhãn này?",
     "deleteCuration": "Xoá bản đóng góp này?",
     "importCuration": "Nhập bản đóng góp này?",
-    "deleteGameImage": "Delete this Game Image?",
-    "deletePlaylist": "Delete this Playlist?",
+    "deleteGameImage": "Xóa hình ảnh này?",
+    "deletePlaylist": "Xoá danh sách này?",
     "importAllCurations": "Nhập tất cả bản đóng góp?",
     "deleteAllCurations": "Xoá tất cả bản đóng góp?",
-    "removePlaylistGame": "Remove this Game from the Playlist?",
+    "removePlaylistGame": "Xoá trò chơi này khỏi danh sách?",
     "deleteGame": "Xoá trò chơi này? Không hoàn tác được đâu nhé.",
     "deleteGameData": "Xoá dữ liệu của trò chơi này? Không hoàn tác được đâu nhé.",
     "deleteAddApp": "Xoá ứng dụng đi kèm này?",
-    "deleteTagCategory": "Delete this Tag Category?",
+    "deleteTagCategory": "Xoá danh mục nhãn này?",
     "deleteTag": "Xoá nhãn này?",
     "deleteTagAlias": "Xoá tên khác của nhãn?",
     "deleteSource": "Xoá nguồn này?",
     "uninstallGame": "Gỡ trò chơi?",
-    "unableToUninstallGameData": "Unable to delete data pack. Is it in use? Try restarting the launcher.",
+    "unableToUninstallGameData": "Không thể xóa gói dữ liệu. Nó có được sử dụng không? Thử khởi động lại trình khởi chạy.",
     "unableToDeleteGame": "Không thể xoá trò chơi. Bạn có đang mở trò này không? Hãy thử mở lại trình khởi chạy.",
     "downloadingGame": "Đang tải trò chơi...",
-    "verifyingGame": "Verifying Game...",
+    "verifyingGame": "Đang xác nhận trò chơi...",
     "aFewMinutes": "Có thể mất vài phút."
   },
   "libraries": {
     "arcade": "Trò chơi",
+    "arcadeSingular": "Trò chơi",
     "arcadePlural": "Tất cả trò chơi",
     "theatre": "Hoạt hình",
-    "theatrePlural": "Tất cả hoạt hình",
+    "theatreSingular": "Hoạt hình",
+    "theatrePlural": "Tất cả Hoạt hình",
     "auditorium": "Khán phòng NG",
-    "auditoriumPlural": "Tất cả hoạt hình NG"
+    "auditoriumSingular": "Hoạt hình",
+    "auditoriumPlural": "Tất cả Hoạt hình Newgrounds"
   },
   "upgrades": {
     "infinity": "Flashpoint Infinity",
-    "infinityDesc": "Các tệp bắt buộc. Thêm hỗ trợ cho các trò chơi Flash.",
+    "infinityDesc": "Các tệp cần thiết. Hỗ trợ thêm cho các trò chơi Flash.",
     "tech": "Công nghệ khác",
     "techDesc": "Hỗ trợ các công nghệ khác - Shockwave, Unity, Java, HTML5, v.v.",
     "screenshots": "Biểu trưng & Ảnh chụp màn hình",
