--- a/lang/pl-PL.json
+++ b/lang/pl-PL.json
@@ -2,10 +2,18 @@
   "name": "Polski",
   "config": {
     "configHeader": "Konfiguracja",
-    "configDesc": "(By niektóre ze zmian zadziałały musisz kliknąć 'Zapisz i uruchom ponownie')",
+    "configDesc": "(By niektóre ze zmian zadziałały, musisz kliknąć 'Zapisz i uruchom ponownie')",
     "preferencesHeader": "Ustawienia",
-    "extremeGames": "Zawartość ekstremalna",
-    "extremeGamesDesc": "Pokaż gry ekstremalne (zawierające przemoc, seks lub inną zawartość nie nadającą się dla dzieci).",
+    "extremeGames": "Pokaż ekstremalne filtry",
+    "extremeGamesDesc": "Pozwala na przełączanie, tworzenie i modyfikowanie filtrów tagów ekstremalnych, aby kontrolować zawartość nieodpowiednią dla dzieci.",
+    "hideExtremeScreenshots": "Ukryj ekstremalne zrzuty ekranu",
+    "hideExtremeScreenshotsDesc": "Ukrywa zrzuty ekranu zawartości oznaczonej jako ekstremalna. Mogą być odsłonięte, klikając na pole obrazu.",
+    "fancyAnimations": "Ozdobne animacje",
+    "fancyAnimationsDesc": "Włącz ozdobne animacje w launcherze.",
+    "searchLimit": "Limit wyników",
+    "searchLimitDesc": "Ogranicz liczbę wyników zwracanych w dowolnym wyszukiwaniu",
+    "searchLimitUnlimited": "Nieograniczona",
+    "searchLimitValue": "{0} Wyników",
     "enableEditing": "Uruchom tryb edycji",
     "enableEditingDesc": "Pozwala na edytowanie gier oraz dodatkowych aplikacji. Pokazuje także zakładkę \"Dodaj do Flashpointa\".",
     "onDemandImages": "Logotypy i miniaturki na żądanie",
@@ -16,6 +24,7 @@
     "fallbackLanguageDesc": "Język używany w przypadku nieprzetłumaczenia czegoś na pierwszy.",
     "auto": "Automatycznie ({0})",
     "none": "Brak",
+    "contentFiltersHeader": "Filtry treści",
     "flashpointHeader": "Flashpoint",
     "flashpointPath": "Ścieżka dostępu do Flashpointa",
     "flashpointPathDesc": "Ścieżka do folderu Flashpointa (może być względna)",
@@ -26,13 +35,13 @@
     "updateSource": "Aktualizuj źródło",
     "platforms": "Platformy",
     "nativePlatforms": "Natywne platformy",
-    "nativePlatformsDesc": "Użyj natywnej wersji tych platform. (Jeśli nie jest dostępne, zostanie użyte Wine)",
-    "tagFilterGroups": "Tag Filter Groups",
-    "tagFilterGroupsDesc": "These groups will filter suggestions and games out of search results",
-    "editTagFilter": "Edit Tag Filter Group",
-    "duplicateTagFilter": "Duplicate Tag Filter Group",
-    "deleteTagFilter": "Delete Tag Filter Group",
-    "appPathOverrides": "Zastąpienie Ścieżki Aplikacji",
+    "nativePlatformsDesc": "Użyj natywnych wersji tych platform. (Jeśli nie są dostępne, zostanie użyte Wine)",
+    "tagFilterGroups": "Grupy filtrów tagów",
+    "tagFilterGroupsDesc": "Grupy te będą filtrować sugestie i gry z wyników wyszukiwań",
+    "editTagFilter": "Edytuj grupę filtrów tagów",
+    "duplicateTagFilter": "Duplikuj grupę filtrów tagów",
+    "deleteTagFilter": "Usuń grupę filtrów tagów",
+    "appPathOverrides": "Zastąpienie ścieżki aplikacji",
     "appPathOverridesDesc": "Nadpisuje ścieżkę aplikacji po lewej stronie na ścieżkę znajdującą się po prawej stronie przy uruchamianiu gier.",
     "visualsHeader": "Wygląd",
     "useCustomTitleBar": "Użyj własnego paska tytułowego",
@@ -47,7 +56,7 @@
     "showDeveloperTab": "Pokaż zakładkę dla deweloperów",
     "showDeveloperTabDesc": "Pokaż zakładkę 'Dla deweloperów'. Najpewniej przyda się tylko deweloperom i kuratorom.",
     "server": "Serwer",
-    "serverDesc": "Który Proces Serwera uruchomić podczas uruchamiania launchera.",
+    "serverDesc": "Którego procesu serwera używać przy uruchamianiu launchera.",
     "metadataServerHost": "Host serwera metadanych",
     "metadataServerHostDesc": "Host serwera metadanych. Używany do synchronizacji nowych i zaktualizowanych informacji o grze w launcherze.",
     "extensionsHeader": "Rozszerzenia",
@@ -58,7 +67,7 @@
     "extApplications": "Aplikacja(-e)",
     "saveAndRestart": "Zapisz i uruchom ponownie",
     "saveAndClose": "Zapisz i zamknij",
-    "tagFilterGroupEditor": "Tag Filter Group Editor"
+    "tagFilterGroupEditor": "Edytor grup filtrów tagów"
   },
   "home": {
     "updateHeader": "Aktualizacja launchera",
@@ -79,6 +88,7 @@
     "helpInfo": "Potrzebujesz pomocy? {0}.",
     "help": "Przeczytaj plik readme",
     "upgradesHeader": "Komponenty",
+    "updateFeedHeader": "Aktualności",
     "installComplete": "Instalacja zakończona",
     "alreadyInstalled": "Już zainstalowany",
     "download": "Pobierz",
@@ -100,10 +110,11 @@
     "filters": "Filtry",
     "logLevels": "Poziomy logów",
     "copyText": "Kopiuj tekst",
-    "clearLog": "Wyczyść logi",
+    "clearLog": "Wyczyść log",
     "copy404Urls": "Kopiuj adresy 404",
     "uploadLog": "Wyślij Log",
-    "copiedToClipboard": "Skopiowano do schowka"
+    "copiedToClipboard": "Skopiowano do schowka",
+    "openLogsWindow": "Otwórz okno dzienników"
   },
   "app": {
     "home": "Strona główna",
@@ -155,19 +166,19 @@
     "checkMissingExecMappings": "Sprawdź brakujące mapowania plików wykonywalnych",
     "checkMissingExecMappingsDesc": "Pokaż wszystkie pliki wykonywalne dla win32, linux i darwin, które nie są zmapowane",
     "renameImagesTitleToId": "Zmień nazwy zdjęć (Tytuł => ID)",
-    "renameImagesTitleToIdDesc": "Znajdź wszystkie zdjęcia gier z ich tytułami w nazwie i zmień ich nazwy by było w nich ID",
+    "renameImagesTitleToIdDesc": "Znajdź wszystkie obrazy gry z jej tytułem w nazwie i zmień ich nazwy na jej ID",
     "renameImagesIdToTitle": "Zmień nazwy zdjęć (ID => Tytuł)",
-    "renameImagesIdToTitleDesc": "Znajdź wszystkie zdjęcia gier z ich ID w nazwie i zmień ich nazwy by była w nich nazwa gry",
+    "renameImagesIdToTitleDesc": "Znajdź wszystkie obrazy gry z jej ID w nazwie i zmień ich nazwy na jej tytuł",
     "createMissingFolders": "Utwórz brakujące foldery",
-    "createMissingFoldersDesc": "Znajdź wszystkie foldery których brakuje w strukturze Flashpointa i utwórz je",
+    "createMissingFoldersDesc": "Znajdź wszystkie foldery, których brakuje w strukturze Flashpointa i utwórz je",
     "importLegacyPlatforms": "Import starszych platform",
     "importLegacyPlatformsDesc": "Importuje starsze platformy z `Data/Platforms/` - UWAGA: Nadpisze konfliktujące gry",
     "importLegacyPlaylists": "Import starszych list odtwarzania",
     "importLegacyPlaylistsDesc": "Importuje starsze listy odtwarzania z `/Data/Playlists`",
     "deleteAllPlaylists": "Usuń wszystkie playlisty",
     "deleteAllPlaylistsDesc": "NIEBEZPIECZNE! Usuwa wszystkie playlisty.",
-    "importMetaEdits": "Importuj Edycje Metadanych",
-    "importMetaEditsDesc": "Importuje WSZYSTKIE Edycje Metadanych z `/Data/MetaEdits`",
+    "importMetaEdits": "Importuj edycje metadanych",
+    "importMetaEditsDesc": "Importuje WSZYSTKIE edycje metadanych z `/Data/MetaEdits`",
     "fixPrimaryAliases": "Napraw podstawowe aliasy",
     "fixPrimaryAliasesDesc": "Dodaj podstawowy alias do wszystkich tagów, w których tego brakuje",
     "fixCommaTags": "Napraw tagi z przecinkami",
@@ -179,7 +190,7 @@
     "migrateExtremeGames": "Przenieś gry ekstremalne",
     "migrateExtremeGamesDesc": "Usuwa oznaczenie \"ekstremalne\" z każdej gry i przypisuje im tag \"LEGACY-Extreme\"",
     "massImportGameData": "Masowy import danych gry",
-    "massImportGameDataDesc": "Mass imports Game Data packs, attempting to match their filename to a games UUID.",
+    "massImportGameDataDesc": "Masowo importuje pakiety z danymi gry, próbując dopasować ich nazwę do UUID gier.",
     "servicesHeader": "Usługi w tle",
     "servicesMissing": "Brak aktywnych usług.",
     "running": "Działające",
@@ -192,20 +203,20 @@
     "restart": "Uruchom ponownie",
     "restartDesc": "Uruchom usługę ponownie",
     "details": "Szczegóły",
-    "detailsDesc": "Otwórz okno ze szczegółami"
+    "detailsDesc": "Otwórz okno ze szczegółami usługi"
   },
   "about": {
     "aboutHeader": "O programie",
-    "flashpoint": "BlueMaxima's Flashpoint",
+    "flashpoint": "Flashpoint autorstwa BlueMaxima",
     "flashpointDesc": "Projekt archiwizacyjny, dla którego został stworzony ten launcher. Jest to jednocześnie archiwum, muzeum i kolekcja grywalnych gier przeglądarkowych.",
     "website": "Strona internetowa",
     "flashpointLauncher": "Launcher Flashpoint",
-    "flashpointLauncherDesc": "Aplikacja o otwartym źródle służąca do przeglądania, zarządzania i grania w gry w projekcie Flashpoint.",
+    "flashpointLauncherDesc": "Aplikacja o otwartym kodzie źródłowym służąca do przeglądania, zarządzania i grania w gry w projekcie Flashpoint.",
     "version": "Wersja",
     "license": "Licencja",
     "licenseInfo": "MIT (Przeczytaj plik 'LICENSE' by dowiedzieć się więcej)",
     "creditsHeader": "Twórcy",
-    "specialThanks": "Specjalne Podziękowania"
+    "specialThanks": "Specjalne podziękowania"
   },
   "browse": {
     "noTitle": "Brak tytułu",
@@ -261,12 +272,12 @@
     "uninstallGame": "Odinstaluj grę",
     "installed": "Zainstalowane",
     "notInstalled": "Nie zainstalowano",
-    "legacyGame": "Legacy Game",
+    "legacyGame": "Starsza gra",
     "download": "Pobierz",
     "thumbnail": "Miniaturka",
     "screenshot": "Zrzut ekranu",
     "dropImageHere": "Upuść obraz tutaj, by go dodać",
-    "noGameSelected": "Nie wybrano gry",
+    "noGameSelected": "Nie wybrano {0}",
     "clickToSelectGame": "Kliknij na grę by ją zaznaczyć.",
     "deleteAdditionalApplication": "Usuń dodatkowe aplikacje",
     "deleteGameAndAdditionalApps": "Usuń grę (i dodatkowe aplikacje)",
@@ -281,14 +292,17 @@
     "noGamesFound": "Nie znaleziono gier!",
     "dropGameOnLeft": "Upuść grę na playliście na {0} by ją dodać.",
     "leftSidebar": "lewy pasek boczny",
-    "setFlashpointPathQuestion": "Czy ustawiłeś {0} na stronie {1}?",
+    "setFlashpointPathQuestion": "Czy ustawiłeś ścieżkę do {0} na stronie {1}?",
     "flashpointPath": "Ścieżka dostępu do Flashpointa",
     "config": "Konfiguracja",
-    "noteSaveAndRestart": "Ważne: Musisz kliknąć {0} by zachować zmiany.",
+    "noteSaveAndRestart": "Ważne: Musisz kliknąć {0} by nałożyć zmiany.",
     "saveAndRestart": "Zapisz i uruchom ponownie",
     "thereAreNoGames": "Brak pasujących gier.",
-    "noGameMatchedDesc": "Żaden tytuł gry nie odpowiada twojemu zapytaniu.",
-    "noGameMatchedSearch": "Spróbuj użyć bardziej ogólnego zapytania."
+    "noGameMatchedDesc": "Żaden tytuł gry nie odpowiada twojemu wyszukiwaniu.",
+    "noGameMatchedSearch": "Spróbuj użyć bardziej ogólnego wyszukiwania.",
+    "mountParameters": "Parametry montowania",
+    "noMountParameters": "Brak parametrów montowania",
+    "showExtremeScreenshot": "Pokaż ekstremalny zrzut ekranu"
   },
   "tags": {
     "name": "Nazwa",
@@ -303,11 +317,11 @@
     "editTag": "Edytuj tag",
     "color": "Kolor",
     "noTagSelected": "Nie zaznaczono tagu",
-    "clickToSelectTag": "Kliknij aby wybrać Tag",
+    "clickToSelectTag": "Kliknij, aby wybrać tag",
     "deleteTagAlias": "Usuń alias tagu",
     "setPrimaryAlias": "Ustaw podstawowy alias",
     "mergeIntoTag": "Połącz w Tag",
-    "mergeTag": "Połącz Tag",
+    "mergeTag": "Scal tag",
     "makeAliasWhenMerged": "Ustawić to jako alias tagu?",
     "deleteTag": "Usuń tag",
     "deleteTagCategory": "Usuń kategorię tagu",
@@ -337,7 +351,7 @@
     "loadFolder": "Załaduj folder",
     "loadFolderDesc": "Załaduj jeden lub więcej folderów archiwizowanych gier",
     "scanNewCurationFolders": "Skanuj w poszukiwaniu nowych kuracji",
-    "scanNewCurationFoldersDesc": "Scans for curations that have been added after the initial scan",
+    "scanNewCurationFoldersDesc": "Skanuje pod kątem kuracji, które zostały dodane po początkowym skanowaniu",
     "noCurations": "Brak archiwizowanych gier",
     "id": "Folder archiwizowanej gry",
     "heading": "Nagłówek",
@@ -369,10 +383,10 @@
     "unusedTags": "Następujące tagi nie są obecne w żadnej innej grze. Czy są poprawne?",
     "unusedPlatform": "'Platforma' ma niewykorzystywaną wartość. Upewnij się że jest poprawnie wpisana!",
     "nonExistingLibrary": "'Biblioteka' nie jest nazwą istniejącej biblioteki! (Zostanie użyta domyślna wartość)",
-    "nonContentFolders": "Subfolder inny niż 'content' znajduje się w folderze archiwizowanej gry. Czy powinien tam być?",
+    "nonContentFolders": "Foldery bez treści znalezione w folderze kuracji. Czy powinny tam być?",
     "noTags": "Brakuje tagów w tej kuracji.",
     "noSource": "\"Źródło\" jest wymaganym polem.",
-    "unenteredTag": "The Tags text field hasn't been submitted.",
+    "unenteredTag": "Pole tekstowe tagów nie zostało wysłane.",
     "noLogo": "W tej kuracji brakuje loga.",
     "noScreenshot": "Brakuje zrzutu ekranu w tej kuracji.",
     "ilc_notHttp": "Użyj HTTP.",
@@ -385,7 +399,7 @@
     "save": "Zapisz",
     "saveDesc": "Zapisz zmiany i skończ edycję",
     "discard": "Anuluj",
-    "discardDesc": "Anuluj zmiany i skończ edycję",
+    "discardDesc": "Anuluj zmiany i zakończ edycję",
     "edit": "Edytuj",
     "editDesc": "Edytuj tę listę odtwarzania",
     "delete": "Usuń",
@@ -413,7 +427,9 @@
     "installingFiles": "Instalowanie plików...",
     "complete": "Ukończono",
     "exportMetaEditTitle": "Eksportuj edycję metadanych",
-    "exportMetaEditDesc": "Wybierz wszystkie edycje metadanych do wyeksportowania:"
+    "exportMetaEditDesc": "Wybierz wszystkie edycje metadanych do wyeksportowania:",
+    "showImage": "Pokaż zdjęcie",
+    "searching": "Wyszukiwanie..."
   },
   "menu": {
     "viewThumbnailInFolder": "Zobacz miniaturki w folderze",
@@ -442,8 +458,8 @@
     "importPlaylistAs": "Importuj playlistę jako",
     "selectFileToExportMeta": "Wybierz plik w którym zapisać metadane",
     "selectFolderToExportMetaAndImages": "Wybierz folder w którym zapisać metadane i zdjęcia",
-    "replaceFilesQuestion": "Zastąpić pliki?",
-    "exportedAlreadyExistsYesNo": "Jeden lub więcej eksportowanych plików już istnieje.\nCzy chcesz je zastąpić?",
+    "replaceFilesQuestion": "Zamienić pliki?",
+    "exportedAlreadyExistsYesNo": "Jeden lub więcej eksportowanych plików już istnieje.\nCzy chcesz je zamienić?",
     "selectFolder": "Wybierz folder",
     "selectScreenshot": "Wybierz zrzut ekranu",
     "selectThumbnail": "Wybierz miniaturkę",
@@ -453,38 +469,38 @@
     "selectPlaylistToImport": "Wybierz playlistę do zaimportowania",
     "selectFileToExportPlaylist": "Wybierz plik, w którym chcesz zapisać playlistę",
     "dataRequired": "Wymagane dodatkowe dane",
-    "dataRequiredDesc": "Musisz zainstalować dodatek na ekranie startowym zanim będziesz w stanie używać Launchera.\n\nCzy chcesz zrobić to teraz?",
+    "dataRequiredDesc": "Musisz zainstalować dodatek na ekranie startowym, zanim będziesz w stanie używać Launchera.\n\nCzy chcesz zrobić to teraz?",
     "upgradeWillInstallTo": "{0} zostanie zainstalowane w",
     "verifyPathSelection": "Tutaj również zostaną zainstalowane przyszłe aktualizacje. Czy to jest poprawne?",
     "restartNow": "Uruchomić ponownie?",
-    "restartToApplyUpgrade": "Ta aktualizacja nie zostanie zastosowana dopóki nie zrestartujesz.\nCzy chcesz to zrobić teraz?",
-    "areYouSure": "Jesteś pewien?",
-    "areYouSureDelete": "Are you sure you want to delete this entry?",
-    "areYouSurePlaylistRemove": "Are you sure you want to remove this entry from the playlist?",
+    "restartToApplyUpgrade": "Ta aktualizacja nie zostanie zastosowana, dopóki nie uruchomisz ponownie.\nCzy chcesz to zrobić teraz?",
+    "areYouSure": "Czy na pewno?",
+    "areYouSureDelete": "Czy na pewno chcesz usunąć tę pozycję?",
+    "areYouSurePlaylistRemove": "Czy na pewno chcesz usunąć tę pozycję z playlisty?",
     "cancel": "Anuluj",
-    "mergePlaylists": "Połącz playlisty",
+    "mergePlaylists": "Scal playlisty",
     "newPlaylist": "Zostaw osobno",
     "uploadPrivacyWarning": "Twoje logi będą publicznie dostępne.\nLink zostanie skopiowany do schowka.\n\nJesteś pewien?",
     "overwriteFileTitle": "Plik już istnieje!",
     "overwriteFileMessage": "Plik z taką samą nazwą już istnieje. Czy chcesz go nadpisać?",
     "overwriteFileDetail": "Ścieżka pliku:",
-    "deleteTagFilterGroup": "Delete this Tag Filter Group?",
-    "deleteCuration": "Delete this Curation?",
-    "importCuration": "Zaimportować tą kurację?",
-    "deleteGameImage": "Delete this Game Image?",
+    "deleteTagFilterGroup": "Usunąć tę grupę filtrów tagów?",
+    "deleteCuration": "Usunąć tę kurację?",
+    "importCuration": "Zaimportować tę kurację?",
+    "deleteGameImage": "Usunąć ten obraz gry?",
     "deletePlaylist": "Usunąć tę playlistę?",
     "importAllCurations": "Zaimportować wszystkie kuracje?",
     "deleteAllCurations": "Usunąć wszystkie kuracje?",
     "removePlaylistGame": "Usunąć grę z playlisty?",
     "deleteGame": "Usunąć tę grę? Tej operacji nie można cofnąć.",
-    "deleteGameData": "Delete this Game Data? This cannot be undone.",
-    "deleteAddApp": "Usunąć tą dodatkową aplikację?",
+    "deleteGameData": "Usunąć dane gry? Tej operacji nie można cofnąć.",
+    "deleteAddApp": "Usunąć tę dodatkową aplikację?",
     "deleteTagCategory": "Usunąć tę kategorię tagów?",
     "deleteTag": "Usunąć ten tag?",
     "deleteTagAlias": "Usunąć ten alias tagu?",
     "deleteSource": "Usunąć to źródło?",
     "uninstallGame": "Odinstalować tę grę?",
-    "unableToUninstallGameData": "Unable to delete data pack. Is it in use? Try restarting the launcher.",
+    "unableToUninstallGameData": "Nie można usunąć paczki danych. Czy jest w użyciu? Spróbuj uruchomić ponownie launcher.",
     "unableToDeleteGame": "Nie można usunąć gry. Czy jest uruchomiona? Spróbuj zrestartować launcher.",
     "downloadingGame": "Pobieranie gry...",
     "verifyingGame": "Weryfikowanie gry...",
@@ -492,17 +508,20 @@
   },
   "libraries": {
     "arcade": "Gry",
+    "arcadeSingular": "Gra",
     "arcadePlural": "Wszystkie gry",
     "theatre": "Animacje",
+    "theatreSingular": "Animacja",
     "theatrePlural": "Wszystkie animacje",
     "auditorium": "NG Auditorium",
+    "auditoriumSingular": "Animacja",
     "auditoriumPlural": "Wszystkie animacje NG"
   },
   "upgrades": {
     "infinity": "Flashpoint Infinity",
     "infinityDesc": "Wymagane pliki. Dodaje wsparcie dla gier Flash.",
     "tech": "Inne technologie",
-    "techDesc": "Dodaje wsparcie dla wszystkich innych technologii - Shockwave, Unity, Java, HTML5, itp.",
+    "techDesc": "Dodaje wsparcie dla wszystkich innych technologii — Shockwave, Unity, Java, HTML5 itp.",
     "screenshots": "Loga i zrzuty ekranu",
     "screenshotsDesc": "Dodaje loga dla widoku siatki i zrzuty ekranu do wszystkich gier."
   }
