--- a/lang/ru-RU.json
+++ b/lang/ru-RU.json
@@ -1,11 +1,19 @@
 {
-  "name": "Русский",
+  "name": "Английский",
   "config": {
     "configHeader": "Настройки",
     "configDesc": "(Вы должны нажать 'Сохранить и перезапустить' для того, чтобы изменения вошли в силу)",
     "preferencesHeader": "Персонализация",
-    "extremeGames": "Взрослый контент",
-    "extremeGamesDesc": "Allow tags inside 'Extreme' tag filter groups and corresponding games to be shown.",
+    "extremeGames": "Show Extreme Filters",
+    "extremeGamesDesc": "Allows Extreme tag filters to be toggled, created and modified to control content unsuitable for children.",
+    "hideExtremeScreenshots": "Скрыть экстремальные скриншоты",
+    "hideExtremeScreenshotsDesc": "Скрывает скриншоты экстремального содержимого, можно вернуть нажатием на окно изображения.",
+    "fancyAnimations": "Fancy Animations",
+    "fancyAnimationsDesc": "Enable fancy animations in the launcher.",
+    "searchLimit": "Search Limit",
+    "searchLimitDesc": "Limit the number of results returned in any search",
+    "searchLimitUnlimited": "Unlimited",
+    "searchLimitValue": "{0} Results",
     "enableEditing": "Включить редактирование",
     "enableEditingDesc": "Включите редактирование игр и дополнительных приложений. Также показывает вкладки, связанные с редактированием.",
     "onDemandImages": "Изображения по требованию",
@@ -16,24 +24,25 @@
     "fallbackLanguageDesc": "Язык, который будет использоваться в случаях несовместимости с языком по умолчанию.",
     "auto": "Системный ({0})",
     "none": "Нет",
+    "contentFiltersHeader": "Content Filters",
     "flashpointHeader": "Flashpoint",
     "flashpointPath": "Путь",
     "flashpointPathDesc": "Путь к папке, в которой находится Flashpoint (может быть относительным)",
     "browse": "Обзор",
     "libraries": "Библиотеки",
     "randomLibraries": "Случайные библиотеки",
-    "randomLibrariesDesc": "Библиотеки для случайных выбора на домашней странице.",
-    "updateSource": "Update Source",
+    "randomLibrariesDesc": "Библиотеки для случайного выбора на домашней странице.",
+    "updateSource": "Обновить источник",
     "platforms": "Платформы",
-    "nativePlatforms": "Платформы Native",
-    "nativePlatformsDesc": "Используйте Native версии этих платформ. (Если нет, он будет использовать Wine)",
-    "tagFilterGroups": "Tag Filter Groups",
-    "tagFilterGroupsDesc": "These groups will filter suggestions and games out of search results",
-    "editTagFilter": "Edit Tag Filter Group",
-    "duplicateTagFilter": "Duplicate Tag Filter Group",
-    "deleteTagFilter": "Delete Tag Filter Group",
+    "nativePlatforms": "Native платформы",
+    "nativePlatformsDesc": "Используйте Native версии этих платформ. (Если недоступно, то будет использоваться Wine)",
+    "tagFilterGroups": "Группы фильтров тегов",
+    "tagFilterGroupsDesc": "Эти группы будут отфильтровывать предложения и игры с результатов поиска",
+    "editTagFilter": "Редактировать группу фильтров тегов",
+    "duplicateTagFilter": "Дублировать группу фильтров тегов",
+    "deleteTagFilter": "Удалить группу фильтров тегов",
     "appPathOverrides": "Переопределение пути приложения",
-    "appPathOverridesDesc": "Переопределяет путь к приложению слева с правой стороны при запуске игр.",
+    "appPathOverridesDesc": "Переопределяет путь к приложению слева с той что справа при запуске игр.",
     "visualsHeader": "Отображение",
     "useCustomTitleBar": "Использовать пользовательский заголовок",
     "useCustomTitleBarDesc": "Использовать пользовательский заголовок сверху этого окна.",
@@ -42,12 +51,12 @@
     "themeDesc": "ID темы для использования.",
     "logoSet": "Набор логотипа",
     "noLogoSet": "Нет набора логотипа",
-    "logoSetDesc": "ID используемого набора логотипа для использования.",
+    "logoSetDesc": "ID набора логотипа для использования.",
     "advancedHeader": "Дополнительно",
-    "showDeveloperTab": "Показывать вкладку 'Разработка'",
-    "showDeveloperTabDesc": "Показывает вкладку 'Разработчикам'. Она в большинстве полезна случаев только для разработчиков и кураторов.",
+    "showDeveloperTab": "Показать вкладку разработчика",
+    "showDeveloperTabDesc": "Показывает вкладку 'Разработчиков'. Она в большинстве случаев полезна только для разработчиков и кураторов.",
     "server": "Сервер",
-    "serverDesc": "Какой процесс сервера запускается при запуске лаунчера.",
+    "serverDesc": "Какой процесс сервера запустить при запуске лаунчера.",
     "metadataServerHost": "Хост сервера метаданных",
     "metadataServerHostDesc": "Хост сервера метаданных. Используется для синхронизации новой и обновлённой информации об игре в лаунчере.",
     "extensionsHeader": "Расширения",
@@ -57,30 +66,31 @@
     "extLogoSets": "Набор логотипа(ов)",
     "extApplications": "Приложение(я)",
     "saveAndRestart": "Сохранить и перезапустить",
-    "saveAndClose": "Save and Close",
-    "tagFilterGroupEditor": "Tag Filter Group Editor"
+    "saveAndClose": "Сохранить и закрыть",
+    "tagFilterGroupEditor": "Редактор групп фильтров тегов"
   },
   "home": {
     "updateHeader": "Обновление Лаунчера",
     "currentVersion": "Текущая версия",
     "nextVersion": "Следующая версия",
-    "updateAvailable": "Обновление доступно",
-    "upToDate": "Обновиться.",
+    "updateAvailable": "Доступно обновление",
+    "upToDate": "Актуальная версия.",
     "downloadingUpdate": "Загрузка обновления...",
     "quickStartHeader": "Быстрый запуск",
-    "hallOfFameInfo": "Хотите только лучшие игры? Загляните в {0}!",
+    "hallOfFameInfo": "Хотите только лучшее из лучших? Загляните в {0}!",
     "hallOfFame": "Зал Славы",
     "allGamesInfo": "Ищите, во что поиграть? Посмотрите {0}.",
     "allGames": "Все игры",
     "allAnimationsInfo": "Ищите, что посмотреть? Посмотрите {0}.",
     "allAnimations": "Все анимации",
-    "configInfo": "Хотите что-нибудь настроить? Вам в {0}.",
-    "config": "Настройки",
+    "configInfo": "Хотите что-нибудь изменить? Вам в {0}.",
+    "config": "Конфиг",
     "helpInfo": "Нужна помощь? {0}.",
     "help": "Прочитать руководство",
     "upgradesHeader": "Улучшения",
-    "installComplete": "Установка завершено",
-    "alreadyInstalled": "Установлено",
+    "updateFeedHeader": "News Feed",
+    "installComplete": "Установка завершена",
+    "alreadyInstalled": "Уже Установлено",
     "download": "Загрузить",
     "update": "Обновить",
     "checkingUpgradeState": "Проверка состояния обновления...",
@@ -89,21 +99,22 @@
     "tagList": "Лист Тегов",
     "filterByPlatform": "Сортировать по платформе",
     "plannedFeatures": "Ознакомьтесь с запланированными функциями!",
-    "notesHeader": "Примечание",
-    "notes": "Не забудьте прочитать руководство, если у вас есть какие-то вопросы.",
+    "notesHeader": "Примечания",
+    "notes": "Не забудьте прочитать руководство, если у вас есть какие-то неполадки.",
     "linuxSupport": "Проблемы на Linux? {0}",
     "linuxSupportLinkText": "Открыть FAQ",
-    "randomPicks": "Случайные игры",
+    "randomPicks": "Случайный выбор",
     "rerollPicks": "Повторить выбор"
   },
   "logs": {
     "filters": "Фильтры",
     "logLevels": "Уровни лога",
-    "copyText": "Копировать текст",
+    "copyText": "Скопировать текст",
     "clearLog": "Очистить лог",
-    "copy404Urls": "Копировать 404 URL",
+    "copy404Urls": "Скопировать 404 ссылки",
     "uploadLog": "Журнал загрузки",
-    "copiedToClipboard": "Скопировано в буфер обмена"
+    "copiedToClipboard": "Скопировано в буфер обмена",
+    "openLogsWindow": "Open Logs Window"
   },
   "app": {
     "home": "Главная",
@@ -176,10 +187,10 @@
     "exportTagsDesc": "Создаёт файл с тегами и категориями, которые могут быть использованы при импорте тегов",
     "importTags": "Импорт тегов",
     "importTagsDesc": "Импортировать теги из файла, созданного 'Экспорт тегов'",
-    "migrateExtremeGames": "Migrate Extreme Games",
-    "migrateExtremeGamesDesc": "Removes 'Extreme' from any games and assigns the 'LEGACY-Extreme' tag to them",
-    "massImportGameData": "Mass Import Game Data",
-    "massImportGameDataDesc": "Mass imports Game Data packs, attempting to match their filename to a games UUID.",
+    "migrateExtremeGames": "Перенести экстремальные игры",
+    "migrateExtremeGamesDesc": "Удаляет 'Extreme' из любых игр и присваивает им тег 'LEGACY-Extreme'",
+    "massImportGameData": "Массовый импорт данных игры",
+    "massImportGameDataDesc": "Массовый импорт наборов игровых данных, пытающихся сопоставить их имя с UUID игр.",
     "servicesHeader": "Фоновые сервисы",
     "servicesMissing": "Нет сервисов.",
     "running": "Работает",
@@ -258,15 +269,15 @@
     "searching": "Идёт поиск...",
     "library": "Библиотека",
     "defaultLibrary": "Библиотека по умолчанию",
-    "uninstallGame": "Uninstall Game",
-    "installed": "Installed",
-    "notInstalled": "Not Installed",
-    "legacyGame": "Legacy Game",
-    "download": "Download",
+    "uninstallGame": "Удалить игру",
+    "installed": "Установлено",
+    "notInstalled": "Не установлено",
+    "legacyGame": "Устаревшая игра",
+    "download": "Загрузить",
     "thumbnail": "Превью",
     "screenshot": "Скриншот",
     "dropImageHere": "Поместите изображение сюда, чтобы добавить его",
-    "noGameSelected": "Нет выбранной игры",
+    "noGameSelected": "No {0} Selected",
     "clickToSelectGame": "Нажмите на игру, чтобы выбрать её.",
     "deleteAdditionalApplication": "Удалить дополнительные приложения",
     "deleteGameAndAdditionalApps": "Удалить игру (и дополнительные приложения)",
@@ -288,7 +299,10 @@
     "saveAndRestart": "Сохранить и перезапустить",
     "thereAreNoGames": "Игры не найдены.",
     "noGameMatchedDesc": "Нет игр, соответствующих вашему запросу.",
-    "noGameMatchedSearch": "Попробуйте изменить запрос на менее конкретный."
+    "noGameMatchedSearch": "Попробуйте изменить запрос на менее конкретный.",
+    "mountParameters": "Параметры монтирования",
+    "noMountParameters": "Нет параметров шейдера",
+    "showExtremeScreenshot": "Показать Экстремальный Скриншот"
   },
   "tags": {
     "name": "Наименование",
@@ -321,7 +335,7 @@
     "saveImportedCurations": "Сохранить импортированные курации",
     "keepArchiveKey": "Сохранить архив UUID",
     "symlinkCurationContent": "Symlink Curation Content Folder (Требует подтверждение администратора в Windows, требуется для MAD4FP)",
-    "useTagFilters": "Use Tag Filters in Suggestions",
+    "useTagFilters": "Использовать фильтры тегов в предложениях",
     "openCurationsFolder": "Папка Курации",
     "openCurationsFolderDesc": "Откройте папку Кураций в проводнике",
     "openExportsFolder": "Экспортируемые курации",
@@ -336,8 +350,8 @@
     "loadArchiveDesc": "Загрузить один или больше архивов",
     "loadFolder": "Загрузить папку",
     "loadFolderDesc": "Загрузить одну или больше папок",
-    "scanNewCurationFolders": "Scan For New Curations",
-    "scanNewCurationFoldersDesc": "Scans for curations that have been added after the initial scan",
+    "scanNewCurationFolders": "Сканировать новые курирования",
+    "scanNewCurationFoldersDesc": "Сканирование на предмет курирования, добавленных после первоначального сканирования",
     "noCurations": "Нет Курации",
     "id": "Папка курирования",
     "heading": "Название",
@@ -370,14 +384,14 @@
     "unusedPlatform": "'Платформа' имеет неиспользуемое значение. Убедитесь, что указали его правильно!",
     "nonExistingLibrary": "'Библиотека' не является именем существующей библиотеки! (Будет использована библиотека по умолчанию)",
     "nonContentFolders": "Папки без содержимого, найденные в папке Курации. Они должны быть там?",
-    "noTags": "There are no tags on this curation.",
-    "noSource": "'Source' is a required field.",
-    "unenteredTag": "The Tags text field hasn't been submitted.",
-    "noLogo": "There is no logo on this curation.",
-    "noScreenshot": "There is no screenshot on this curation.",
+    "noTags": "На этом курировании нет тегов.",
+    "noSource": "Поле «Источник» обязательно для заполнения.",
+    "unenteredTag": "Текстовое поле тегов не было отправлено.",
+    "noLogo": "На этом курировании нет логотипа.",
+    "noScreenshot": "На этом курировании нет скриншотов.",
     "ilc_notHttp": "Использовать HTTP.",
     "ilc_nonExistant": "Укажите на существующий файл в папке 'содержимое' вашего курирования.",
-    "sort": "Sort Curations (A-Z)"
+    "sort": "Сортировка курирований (A-Z)"
   },
   "playlist": {
     "enterDescriptionHere": "Введите описание сюда...",
@@ -413,13 +427,15 @@
     "installingFiles": "Установка файлов...",
     "complete": "Завершено",
     "exportMetaEditTitle": "Экспорт мета-правок",
-    "exportMetaEditDesc": "Выберите все свойства для экспорта:"
+    "exportMetaEditDesc": "Выберите все свойства для экспорта:",
+    "showImage": "Показать Изображение",
+    "searching": "Searching..."
   },
   "menu": {
     "viewThumbnailInFolder": "Отображать превью в папке",
     "viewScreenshotInFolder": "Отображать скриншоты в папке",
     "openFileLocation": "Открыть расположение файлов",
-    "addToPlaylist": "Add to Playlist",
+    "addToPlaylist": "Добавить в плейлист",
     "duplicateMetaOnly": "Дублировать (Только метафайлы)",
     "duplicateMetaAndImages": "Дублировать (Метафайлы и изображения)",
     "copyGameUUID": "Скопировать UUID игры",
@@ -459,43 +475,46 @@
     "restartNow": "Перезагрузить сейчас?",
     "restartToApplyUpgrade": "Это обновление не будет применено, пока вы не перезапустите.\nВы хотите сделать это сейчас?",
     "areYouSure": "Вы уверены?",
-    "areYouSureDelete": "Are you sure you want to delete this entry?",
-    "areYouSurePlaylistRemove": "Are you sure you want to remove this entry from the playlist?",
+    "areYouSureDelete": "Вы уверены, что хотите удалить эту запись?",
+    "areYouSurePlaylistRemove": "Вы уверены, что хотите удалить эту запись из плейлиста?",
     "cancel": "Отмена",
     "mergePlaylists": "Объединить плейлисты",
-    "newPlaylist": "Stay Separate",
-    "uploadPrivacyWarning": "This will make your Logs available publicly.\nA link will be copied to your clipboard.\n\nAre you sure?",
+    "newPlaylist": "Оставить раздельно",
+    "uploadPrivacyWarning": "Это сделает ваш отчёт общедоступным.\nСсылка будет скопирована в буфер обмена.\n\nВы уверены?",
     "overwriteFileTitle": "Файл уже существует!",
     "overwriteFileMessage": "Файл с таким именем уже существует. Вы хотите перезаписать его?",
     "overwriteFileDetail": "Путь к файлу:",
-    "deleteTagFilterGroup": "Delete this Tag Filter Group?",
-    "deleteCuration": "Delete this Curation?",
-    "importCuration": "Import this Curation?",
-    "deleteGameImage": "Delete this Game Image?",
-    "deletePlaylist": "Delete this Playlist?",
-    "importAllCurations": "Import all Curations?",
-    "deleteAllCurations": "Delete all Curations?",
-    "removePlaylistGame": "Remove this Game from the Playlist?",
-    "deleteGame": "Delete this Game? This cannot be undone.",
-    "deleteGameData": "Delete this Game Data? This cannot be undone.",
-    "deleteAddApp": "Delete this Add App?",
-    "deleteTagCategory": "Delete this Tag Category?",
-    "deleteTag": "Delete this Tag?",
-    "deleteTagAlias": "Delete this Tag Alias?",
-    "deleteSource": "Delete this Source?",
-    "uninstallGame": "Uninstall this Game?",
-    "unableToUninstallGameData": "Unable to delete data pack. Is it in use? Try restarting the launcher.",
-    "unableToDeleteGame": "Unable to delete game. Is it in use? Try restarting the launcher.",
-    "downloadingGame": "Downloading Game...",
-    "verifyingGame": "Verifying Game...",
-    "aFewMinutes": "This may take a few minutes."
+    "deleteTagFilterGroup": "Удалить эту группу фильтров тегов?",
+    "deleteCuration": "Удалить это курирование?",
+    "importCuration": "Импортировать это курирование?",
+    "deleteGameImage": "Удалить это изображение игры?",
+    "deletePlaylist": "Удалить этот плейлист?",
+    "importAllCurations": "Импортировать все курирования?",
+    "deleteAllCurations": "Удалить все курирования?",
+    "removePlaylistGame": "Удалить эту игру из плейлиста?",
+    "deleteGame": "Удалить эту игру? Операция не может быть отменена.",
+    "deleteGameData": "Удалить данные от этой игры? Операция не может быть отменена.",
+    "deleteAddApp": "Удалить это добавить приложение?",
+    "deleteTagCategory": "Удалить эту категорию тегов?",
+    "deleteTag": "Удалить этот тег?",
+    "deleteTagAlias": "Удалить этот псевдоним тегов?",
+    "deleteSource": "Удалить этот источник?",
+    "uninstallGame": "Удалить эту игру?",
+    "unableToUninstallGameData": "Не удается удалить набор данных. Используется ли он? Попробуйте перезапустить лаунчер.",
+    "unableToDeleteGame": "Не удается удалить игру. Используется ли она? Попробуйте перезапустить лаунчер.",
+    "downloadingGame": "Загрузка игры...",
+    "verifyingGame": "Проверка игры...",
+    "aFewMinutes": "Это может занять несколько минут."
   },
   "libraries": {
     "arcade": "Игры",
+    "arcadeSingular": "Game",
     "arcadePlural": "Все игры",
     "theatre": "Анимации",
+    "theatreSingular": "Animation",
     "theatrePlural": "Все анимации",
     "auditorium": "NG Auditorium",
+    "auditoriumSingular": "Animation",
     "auditoriumPlural": "Все NG анимации"
   },
   "upgrades": {
