--- a/lang/sv-SE.json
+++ b/lang/sv-SE.json
@@ -4,8 +4,16 @@
     "configHeader": "Inställningar",
     "configDesc": "(Du kan behöva klicka på \"Spara & starta om\" för att vissa ändringar ska börja gälla)",
     "preferencesHeader": "Alternativ",
-    "extremeGames": "Extreme Content",
-    "extremeGamesDesc": "Allow tags inside 'Extreme' tag filter groups and corresponding games to be shown.",
+    "extremeGames": "Show Extreme Filters",
+    "extremeGamesDesc": "Allows Extreme tag filters to be toggled, created and modified to control content unsuitable for children.",
+    "hideExtremeScreenshots": "Hide Extreme Screenshots",
+    "hideExtremeScreenshotsDesc": "Hides screenshots of Extreme tagged content, can be unhidden with a click on the image box.",
+    "fancyAnimations": "Fancy Animations",
+    "fancyAnimationsDesc": "Enable fancy animations in the launcher.",
+    "searchLimit": "Search Limit",
+    "searchLimitDesc": "Limit the number of results returned in any search",
+    "searchLimitUnlimited": "Unlimited",
+    "searchLimitValue": "{0} Results",
     "enableEditing": "Aktivera redigering",
     "enableEditingDesc": "Aktivera redigering av spel och andra applikationer. Visar också flikar relaterade till redigering.",
     "onDemandImages": "Bilder efter förfrågan",
@@ -16,6 +24,7 @@
     "fallbackLanguageDesc": "Vilket språk som ska användas istället om det valda språket saknar en översättning.",
     "auto": "Auto ({0})",
     "none": "Inget",
+    "contentFiltersHeader": "Content Filters",
     "flashpointHeader": "Flashpoint",
     "flashpointPath": "Sökväg till Flashpoint",
     "flashpointPathDesc": "Sökväg till mappen där Flashpoint ligger (kan vara relativ)",
@@ -23,15 +32,15 @@
     "libraries": "Arkiv",
     "randomLibraries": "Slumpmässigt arkiv",
     "randomLibrariesDesc": "Arkiv att använda för slumpmässiga bilder på hemsidan.",
-    "updateSource": "Update Source",
+    "updateSource": "Uppdatera källa",
     "platforms": "Plattformar",
     "nativePlatforms": "Nativa plattformar",
     "nativePlatformsDesc": "Använd versioner av dessa plattformar som är gjorda för ditt system från början. (Om ingen finns används Wine istället)",
-    "tagFilterGroups": "Tag Filter Groups",
-    "tagFilterGroupsDesc": "These groups will filter suggestions and games out of search results",
-    "editTagFilter": "Edit Tag Filter Group",
-    "duplicateTagFilter": "Duplicate Tag Filter Group",
-    "deleteTagFilter": "Delete Tag Filter Group",
+    "tagFilterGroups": "Tagga filtergrupper",
+    "tagFilterGroupsDesc": "Dessa grupper filtrerar förslag och spel från sökresultaten",
+    "editTagFilter": "Redigera tagg filtergrupp",
+    "duplicateTagFilter": "Duplicera tagg filtergrupp",
+    "deleteTagFilter": "Ta bort tagg filtergrupp",
     "appPathOverrides": "Appens sökväg åsidosätter",
     "appPathOverridesDesc": "Åsidosätter sökvägen till vänster med den till höger när du startar spel.",
     "visualsHeader": "Utseende",
@@ -57,8 +66,8 @@
     "extLogoSets": "Logotyp Set(s)",
     "extApplications": "Applikation(er)",
     "saveAndRestart": "Spara och starta om",
-    "saveAndClose": "Save and Close",
-    "tagFilterGroupEditor": "Tag Filter Group Editor"
+    "saveAndClose": "Spara och stäng",
+    "tagFilterGroupEditor": "Tag filtergrupp Editor"
   },
   "home": {
     "updateHeader": "Uppdatering",
@@ -79,6 +88,7 @@
     "helpInfo": "Behöver du hjälp? {0}.",
     "help": "Läs vår readme",
     "upgradesHeader": "Uppgraderingar",
+    "updateFeedHeader": "News Feed",
     "installComplete": "Installationen är klar",
     "alreadyInstalled": "Redan installerad",
     "download": "Ladda ned",
@@ -103,7 +113,8 @@
     "clearLog": "Rensa logg",
     "copy404Urls": "Kopiera 404 URLs",
     "uploadLog": "Ladda up loggar",
-    "copiedToClipboard": "Kopierad till Urklipp"
+    "copiedToClipboard": "Kopierad till Urklipp",
+    "openLogsWindow": "Open Logs Window"
   },
   "app": {
     "home": "Start",
@@ -176,10 +187,10 @@
     "exportTagsDesc": "Skapar en fil full av taggar och tagg-kategorier som kan användas av 'Importera taggar'",
     "importTags": "Importera taggar",
     "importTagsDesc": "Importerar taggar från en fil som skapats av \"Exportera taggar\"",
-    "migrateExtremeGames": "Migrate Extreme Games",
-    "migrateExtremeGamesDesc": "Removes 'Extreme' from any games and assigns the 'LEGACY-Extreme' tag to them",
-    "massImportGameData": "Mass Import Game Data",
-    "massImportGameDataDesc": "Mass imports Game Data packs, attempting to match their filename to a games UUID.",
+    "migrateExtremeGames": "Migrera extrema spel",
+    "migrateExtremeGamesDesc": "Tar bort 'Extreme' från alla spel och tilldelar dem 'LEGACY-Extreme' taggen",
+    "massImportGameData": "Massa importera speldata",
+    "massImportGameDataDesc": "Massa importerar spel datapaket, försöker matcha deras filnamn till ett spel UUID.",
     "servicesHeader": "Bakgrundsprocesser",
     "servicesMissing": "Det finns inga processer.",
     "running": "Igång",
@@ -258,15 +269,15 @@
     "searching": "Söker...",
     "library": "Bibliotek",
     "defaultLibrary": "Standard-bibliotek",
-    "uninstallGame": "Uninstall Game",
-    "installed": "Installed",
-    "notInstalled": "Not Installed",
-    "legacyGame": "Legacy Game",
-    "download": "Download",
+    "uninstallGame": "Avinstallera Spel",
+    "installed": "Installerad",
+    "notInstalled": "Inte installerad",
+    "legacyGame": "Äldre spel",
+    "download": "Ladda ner",
     "thumbnail": "Miniatyr",
     "screenshot": "Skärmdump",
     "dropImageHere": "Släpp en bild här för att lägga in den",
-    "noGameSelected": "Inget spel valt",
+    "noGameSelected": "No {0} Selected",
     "clickToSelectGame": "Klicka på ett spel för att välja det.",
     "deleteAdditionalApplication": "Ta bort extra program",
     "deleteGameAndAdditionalApps": "Radera spel (inklusive extra program)",
@@ -288,7 +299,10 @@
     "saveAndRestart": "Spara & starta om",
     "thereAreNoGames": "Det finns inga spel.",
     "noGameMatchedDesc": "Inga spel matchade din sökning.",
-    "noGameMatchedSearch": "Pröva att söka efter någonting mindre specifikt."
+    "noGameMatchedSearch": "Pröva att söka efter någonting mindre specifikt.",
+    "mountParameters": "Mount Parameters",
+    "noMountParameters": "No Mount Parameters",
+    "showExtremeScreenshot": "Show Extreme Screenshot"
   },
   "tags": {
     "name": "Namn",
@@ -321,7 +335,7 @@
     "saveImportedCurations": "Spara importerade kurationer",
     "keepArchiveKey": "Behåll UUUID för Curation Archive",
     "symlinkCurationContent": "Symlink Curation Content Folder (Admin prompts i Windows, krävs för MAD4FP)",
-    "useTagFilters": "Use Tag Filters in Suggestions",
+    "useTagFilters": "Använd taggfilter i förslag",
     "openCurationsFolder": "Kurationsmapp",
     "openCurationsFolderDesc": "Öppna mappen med kurationer i utforskaren",
     "openExportsFolder": "Exporterade kurationer",
@@ -336,8 +350,8 @@
     "loadArchiveDesc": "Läs in ett eller flera kurationsarkiv",
     "loadFolder": "Ladda mapp",
     "loadFolderDesc": "Läs in en eller flera kurationsmappar",
-    "scanNewCurationFolders": "Scan For New Curations",
-    "scanNewCurationFoldersDesc": "Scans for curations that have been added after the initial scan",
+    "scanNewCurationFolders": "Skanna efter nya Curations",
+    "scanNewCurationFoldersDesc": "Skannar efter curations som har lagts till efter den första skanningen",
     "noCurations": "Ny kuration",
     "id": "Kurationsmapp",
     "heading": "Rubrik",
@@ -370,14 +384,14 @@
     "unusedPlatform": "\"Plattform\" har ett oanvänt värde. Se till att det är rättstavat!",
     "nonExistingLibrary": "\"Samling\" är inte satt till namnet på en samling som finns! (Standardvärdet kommer att användas)",
     "nonContentFolders": "Kurationsmappen innehåller andra mappar än bara content. Ska de vara där?",
-    "noTags": "There are no tags on this curation.",
-    "noSource": "'Source' is a required field.",
-    "unenteredTag": "The Tags text field hasn't been submitted.",
-    "noLogo": "There is no logo on this curation.",
-    "noScreenshot": "There is no screenshot on this curation.",
+    "noTags": "Det finns inga taggar på denna curation.",
+    "noSource": "'Källa' är ett obligatoriskt fält.",
+    "unenteredTag": "Textfältet Taggar har inte skickats in.",
+    "noLogo": "Det finns ingen logotyp på den här kurationen.",
+    "noScreenshot": "Det finns ingen skärmdump på den här kurationen.",
     "ilc_notHttp": "Använd HTTP.",
     "ilc_nonExistant": "Ange en befintlig fil i din kurations \"content\"-mapp.",
-    "sort": "Sort Curations (A-Z)"
+    "sort": "Sortera Curationer (A-Ö)"
   },
   "playlist": {
     "enterDescriptionHere": "Ange en beskrivning här...",
@@ -413,13 +427,15 @@
     "installingFiles": "Installerar filer...",
     "complete": "Klar",
     "exportMetaEditTitle": "Exportera Meta redigering",
-    "exportMetaEditDesc": "Välj alla egenskaper att exportera:"
+    "exportMetaEditDesc": "Välj alla egenskaper att exportera:",
+    "showImage": "Show Image",
+    "searching": "Searching..."
   },
   "menu": {
     "viewThumbnailInFolder": "Visa miniatyr i mapp",
     "viewScreenshotInFolder": "Visa skärmdump i mapp",
     "openFileLocation": "Öppna målmapp",
-    "addToPlaylist": "Add to Playlist",
+    "addToPlaylist": "Lägg till i spellista",
     "duplicateMetaOnly": "Duplicera (endast metadata)",
     "duplicateMetaAndImages": "Duplicera (metadata && bilder)",
     "copyGameUUID": "Kopiera spel-UUID",
@@ -459,43 +475,46 @@
     "restartNow": "Starta om nu?",
     "restartToApplyUpgrade": "Den här uppgraderingen kommer inte att tillämpas förrän du startar om.\nVill du göra det nu?",
     "areYouSure": "Är du säker?",
-    "areYouSureDelete": "Are you sure you want to delete this entry?",
-    "areYouSurePlaylistRemove": "Are you sure you want to remove this entry from the playlist?",
+    "areYouSureDelete": "Är du säker på att du vill ta bort denna post?",
+    "areYouSurePlaylistRemove": "Är du säker på att du vill ta bort denna post från spellistan?",
     "cancel": "Avbryt",
     "mergePlaylists": "Slå ihop spellistor",
-    "newPlaylist": "Stay Separate",
-    "uploadPrivacyWarning": "This will make your Logs available publicly.\nA link will be copied to your clipboard.\n\nAre you sure?",
+    "newPlaylist": "Stanna separat",
+    "uploadPrivacyWarning": "Detta kommer att göra dina loggar tillgängliga offentligt.\nEn länk kommer att kopieras till ditt urklipp.\n\nÄr du säker?",
     "overwriteFileTitle": "Filen finns redan!",
     "overwriteFileMessage": "En fil med samma namn finns redan. Vill du skriva över den?",
     "overwriteFileDetail": "Sökväg till fil:",
-    "deleteTagFilterGroup": "Delete this Tag Filter Group?",
-    "deleteCuration": "Delete this Curation?",
-    "importCuration": "Import this Curation?",
-    "deleteGameImage": "Delete this Game Image?",
-    "deletePlaylist": "Delete this Playlist?",
-    "importAllCurations": "Import all Curations?",
-    "deleteAllCurations": "Delete all Curations?",
-    "removePlaylistGame": "Remove this Game from the Playlist?",
-    "deleteGame": "Delete this Game? This cannot be undone.",
-    "deleteGameData": "Delete this Game Data? This cannot be undone.",
-    "deleteAddApp": "Delete this Add App?",
-    "deleteTagCategory": "Delete this Tag Category?",
-    "deleteTag": "Delete this Tag?",
-    "deleteTagAlias": "Delete this Tag Alias?",
-    "deleteSource": "Delete this Source?",
-    "uninstallGame": "Uninstall this Game?",
-    "unableToUninstallGameData": "Unable to delete data pack. Is it in use? Try restarting the launcher.",
-    "unableToDeleteGame": "Unable to delete game. Is it in use? Try restarting the launcher.",
-    "downloadingGame": "Downloading Game...",
-    "verifyingGame": "Verifying Game...",
-    "aFewMinutes": "This may take a few minutes."
+    "deleteTagFilterGroup": "Ta bort denna tagg filtergrupp?",
+    "deleteCuration": "Ta bort denna Curation?",
+    "importCuration": "Importera denna Curation?",
+    "deleteGameImage": "Ta bort den här spelbilden?",
+    "deletePlaylist": "Ta bort denna spellista?",
+    "importAllCurations": "Importera alla Curations?",
+    "deleteAllCurations": "Ta bort alla Curations?",
+    "removePlaylistGame": "Ta bort detta spel från spellistan?",
+    "deleteGame": "Ta bort detta spel? Det går inte att ångra.",
+    "deleteGameData": "Ta bort denna speldata? Det går inte att ångra.",
+    "deleteAddApp": "Ta bort denna Lägg till app?",
+    "deleteTagCategory": "Ta bort denna etikettkategori?",
+    "deleteTag": "Ta bort denna tagg?",
+    "deleteTagAlias": "Ta bort denna tagg alias?",
+    "deleteSource": "Ta bort denna källa?",
+    "uninstallGame": "Avinstallera detta spel?",
+    "unableToUninstallGameData": "Det går inte att ta bort datapaket. Används det? Prova att starta om launchern.",
+    "unableToDeleteGame": "Det går inte att ta bort spelet. Är det i bruk? Prova att starta om launchern.",
+    "downloadingGame": "Laddar ner spelet...",
+    "verifyingGame": "Verifierar spelet...",
+    "aFewMinutes": "Detta kan ta några minuter."
   },
   "libraries": {
     "arcade": "Spel",
+    "arcadeSingular": "Game",
     "arcadePlural": "Alla Spel",
     "theatre": "Animationer",
+    "theatreSingular": "Animation",
     "theatrePlural": "Alla Animationer",
     "auditorium": "NG Auditorium",
+    "auditoriumSingular": "Animation",
     "auditoriumPlural": "Alla NG animationer"
   },
   "upgrades": {
